--- a/product/计算与网络/容器服务/动态与公告/产品公告/资源配额说明.md
+++ b/product/计算与网络/容器服务/动态与公告/产品公告/资源配额说明.md
@@ -1,6 +1,6 @@
 
 
-<dx-alert infotype="notice" title="2022-04-26">
+<dx-alert infotype="notice" title="">
 截至2022年4月26日，本说明内容已不适用。集群配额限制详情请参见 [资源配额说明](https://cloud.tencent.com/document/product/457/9087#k8s-.E8.B5.84.E6.BA.90.E9.85.8D.E9.A2.9D.E8.AF.B4.E6.98.8E)。
 </dx-alert>
 
