--- a/product/计算与网络/容器服务/动态与公告/产品公告/伸缩组功能下线公告.md
+++ b/product/计算与网络/容器服务/动态与公告/产品公告/伸缩组功能下线公告.md
@@ -1,6 +1,6 @@
  
 
-为了给您带来一致性的用户体验，腾讯云容器服务计划于2022年5月25日正式下线伸缩组服务，如果您的集群中已创建伸缩组，您可以使用 TKE 提供的**从伸缩组创建节点池 API** 或**通过容器服务控制台**将伸缩组转换成节点池。
+为了给您带来一致性的用户体验，腾讯云容器服务计划于2022年5月25日正式下线伸缩组服务，如果您的集群中已创建伸缩组，您可以使用 TKE 提供的**从伸缩组创建节点池 API** 或**通过容器服务控制台**将伸缩组转换成节点池。将伸缩组转换为节点池的过程将不会影响您业务的正常运行。
 
 <dx-tabs>
 ::: 通过 API
@@ -19,7 +19,7 @@
 
 节点池在伸缩组的基础上提供了更稳定、全面的弹性伸缩能力，方便您更快捷地创建、管理和销毁节点，届时您可通过节点池继续管理已经创建的伸缩组，详情请参考 [节点池概述](https://cloud.tencent.com/document/product/457/43719)。
 
->? 将伸缩组转换为节点池的过程将不会影响您业务的正常运行。
+
 
 ### 下线计划
 - 创建入口关闭：伸缩组服务将于2022年5月10日正式关闭控制台和 API 创建入口。届时您将无法通过控制台和 API 创建新的伸缩组。
