--- a/product/计算与网络/云原生分布式云中心/操作指南/分布式应用管理/应用管理.md
+++ b/product/计算与网络/云原生分布式云中心/操作指南/分布式应用管理/应用管理.md
@@ -59,7 +59,7 @@
 
 1. 如需单独为某个集群下的 K8s 对象进行配置，单击进入**详情** > **实例列表**标签页，找到想要修改的 K8s 对象实例，单击**新建差异化策略**配置策略，差异化策略介绍请见 [差异化策略](https://cloud.tencent.com/document/product/1517/63258)。
  ![](https://qcloudimg.tencent-cloud.cn/raw/f85ed958aefdbebe6809ffec56e72bfb.png)
-2. 如需修改或取消差异化配置，单击进入**详情** > **实例列表**标签页，在指定分发实例上单击**更新差异化策略**或**删除差异化策略**，执行指定的动作。
+2. 如需修改或取消差异化配置，单击进入**详情** > **实例管理**标签页，在指定分发实例上单击**更新差异化策略**或**删除差异化策略**，执行指定的动作。
 
 ### 删除 K8s应用资源
 
