--- a/product/监控与管理/云监控/常见问题/一般性问题.md
+++ b/product/监控与管理/云监控/常见问题/一般性问题.md
@@ -50,6 +50,26 @@
 ### 云监控里面有监控云服务器端口状态的功能吗？
 云监控只有云服务器消耗类指标监控功能，如 CPU 、内存，磁盘等，如需监控可以使用云拨测-[端口性能监控](https://cloud.tencent.com/document/product/280/58014)。
 
+### 云监控是否支持进程监控？
+云监控暂不支持，建议您使用 Prometheus 监控服务自定义上报，详情请参考 [自定义监控](https://cloud.tencent.com/document/product/1416/56027)。
+
+### 云监控能否监控服务器的 IP 和 url ？
+云监控暂不支持，建议您使用 [云拨测](https://cloud.tencent.com/document/product/280/57998)。CAT 可实现对网络质量、页面性能、端口性能、文件传输、音视频体验等场景进行周期性监控。
+
+
+### 云监控如何购买告警短信服务？
+进入 [监控概览](https://console.cloud.tencent.com/monitor/overview) 页面，在“当月已使用短信统计”模块右侧可单击**购买短信**即可购买。 
+![](https://qcloudimg.tencent-cloud.cn/raw/81d9ed5293ba93dc814286e1e28ac303.png)
+
+### 云监控如何监控 HTTP/HTTPS、TCP、UDP 的互联网服务可用性？
+建议您使用 [云拨测](https://cloud.tencent.com/document/product/280/57998) 进行监控，云拨测利用分布于全球的监测网络，提供模拟真实用户体验的可用性探测服务。
+
+
+
+### 云监控是否支持批量拉取指标监控数据？
+云监控单请求最多可支持批量拉取10个实例的指标监控数据，单请求的数据点数限制为1440个。
+
+
 ### 云监控有什么版本？
 您好，云监控基础监控没有版本区分。您可以了解其它监控类产品：
 - [基础监控](https://cloud.tencent.com/document/product/248)
