--- a/product/大数据与AI/弹性MapReduce/常见问题/常见问题.md
+++ b/product/大数据与AI/弹性MapReduce/常见问题/常见问题.md
@@ -69,7 +69,7 @@ common 节点暂不支持扩容。
 默认开启 webhdfs。
 
 ### EMR 是否支持修改所属项目？
-弹性 MapReduce 不支持修改所属项目，如果该问题对您的业务造成影响，你可以申请技术 [工单](https://console.cloud.tencent.com/workorder/category) 支持。
+弹性 MapReduce 不支持修改所属项目，如果该问题对您的业务造成影响，您可以申请技术 [工单](https://console.cloud.tencent.com/workorder/category) 支持。
 
 ### MapReduce 节点中可以运行后端 jar 包吗？
 创建集群时可以使用引导操作来设定自定义的引导脚本来实现，可分别设置在节点初始化后、集群启动前、集群启动后三个时间节点执行；操作文档参见 [引导操作](https://cloud.tencent.com/document/product/589/35656) 。
