--- a/product/数据库/云数据库SQL Server/购买指南/备份空间收费说明.md
+++ b/product/数据库/云数据库SQL Server/购买指南/备份空间收费说明.md
@@ -18,7 +18,7 @@
 >- 备份空间大小可在 [SQL Server 控制台](https://console.cloud.tencent.com/sqlserver) 的数据库备份页查看。
 
 ## 备份价格
-超出赠送空间的备份需要收费，计费方式为按量计费，以地域为维度，超过该地域所有 SQL Server 实例免费额度（100%磁盘存储）的备份空间，中国大陆地域按照0.0008元/GB/小时的价格收费，其他地域（中国香港、中国台湾、其他国家和地区）按照0.0009元/GB/小时的价格收费。
+超出赠送空间的备份需要收费，计费方式为按量计费，以地域为维度，超过该地域所有 SQL Server 实例免费额度（100%磁盘存储）的备份空间，中国大陆地域按照0.0008元/GB/小时的价格收费，其他地域（中国香港、其他国家和地区）按照0.0009元/GB/小时的价格收费。
 >?收费空间不足1GB不产生实际扣费，不足1小时按照1小时计费。
 
 ## 备份收费时间
