--- a/product/计算与网络/容器服务/云原生 etcd/账号授权.md
+++ b/product/计算与网络/容器服务/云原生 etcd/账号授权.md
@@ -1,5 +1,5 @@
 ## 账号授权
-为便于业务进行更细粒度的权限控制，云原生 etcd 将于2022年5月5日接入 [访问管理 CAM](https://cloud.tencent.com/document/product/598)，接入 CAM 用户和后台服务均需要被授权才能正常访问控制台和API。
+为便于业务进行更细粒度的权限控制，云原生 etcd 将于2022年5月5日接入 [访问管理 CAM](https://cloud.tencent.com/document/product/598)，接入 CAM 用户和后台服务均需要被授权才能正常访问控制台和 API。您可以参考以下步骤为子用户授权和为操作其他云资源进行服务授权。
 
 ## 操作步骤
 ### 为子用户授权
@@ -11,11 +11,16 @@
 	- QcloudCEtcdReadOnlyaccess
 ![](https://qcloudimg.tencent-cloud.cn/raw/a2ac6c921ee403abc3f41ab0c9dcd4c2.png)
 4. 单击**确定**。完成授权后，子账号将可以正常访问 etcd 服务，管理员也可以通过创建自定义策略，为用户设置更精细的权限管控。
+
+
 ### 服务授权
-服务授权是指授权当前服务操作其他云资源，例如用户在创建etcd时，选择了创建监控服务、创建云标签，则云原生etcd服务需要对云标签、监控服务有相应的操作权限，因此也需要管理员用户为云原生etcd服务授权。
+服务授权是指授权当前服务操作其他云资源，例如用户在创建 etcd 时，选择了创建监控服务、创建云标签，则云原生 etcd 服务需要对云标签、监控服务有相应的操作权限，因此也需要管理员用户为云原生 etcd 服务授权。
 
-管理员未完成授予云原生etcd服务相应服务角色权限时，用户打开etcd控制台会提示用户完成授权：
 
-![](https://qcloudimg.tencent-cloud.cn/raw/5c59bbaee7e52b2294a447fe020d2532.png)
-![](https://qcloudimg.tencent-cloud.cn/raw/3518da2b8536259696a5ae97e4dc5ccf.png)
-点击**同意授权**，即可完成服务角色授权。
+
+
+1. 登录 [容器服务控制台](https://console.cloud.tencent.com/tke2)，单击左侧导航栏中的**云原生 etcd**，弹出**服务授权**窗口。如下图所示：
+![](https://qcloudimg.tencent-cloud.cn/raw/e39815e649ea75e844bb12143101a2cc.png)
+2. 单击**前往访问管理**，进入角色管理页面。
+![](https://qcloudimg.tencent-cloud.cn/raw/5ecaa26d0c2bcd5c4714f9b73e4ab115.png)
+3. 单击**同意授权**，完成身份验证后即可成功授权。
