--- a/product/监控与管理/应用性能观测/操作指南/资源管理/新建业务系统.md
+++ b/product/监控与管理/应用性能观测/操作指南/资源管理/新建业务系统.md
@@ -1,4 +1,4 @@
-业务系统用于分类管理您的应用，每个业务系统的本文将为您介绍如何新建业务系统。
+业务系统用于分类管理您的应用，您可以根据不同业务系统设置不同的存储时长、上报限额等。本文将为您介绍如何新建业务系统。
 
 ## 操作步骤
 1. 进入应用性能观测控制台 [**资源管理**](https://console.cloud.tencent.com/apm/monitor/team)
