--- a/product/计算与网络/容器服务/云原生 etcd/账号授权.md
+++ b/product/计算与网络/容器服务/云原生 etcd/账号授权.md
@@ -19,8 +19,8 @@
 
 
 
-1. 登录 [容器服务控制台](https://console.cloud.tencent.com/tke2)，单击左侧导航栏中的**云原生 etcd**，弹出**服务授权**窗口。如下图所示：
+1. 登录 [容器服务控制台](https://console.cloud.tencent.com/tke2)，单击左侧导航栏中的**云原生 etcd**，弹出**服务授权**窗口。
+2. 单击**前往访问管理**，进入角色管理页面。如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/e39815e649ea75e844bb12143101a2cc.png)
-2. 单击**前往访问管理**，进入角色管理页面。
+3. 单击**同意授权**，完成身份验证后即可成功授权。如下图所示：
 ![](https://qcloudimg.tencent-cloud.cn/raw/5ecaa26d0c2bcd5c4714f9b73e4ab115.png)
-3. 单击**同意授权**，完成身份验证后即可成功授权。
