--- a/product/域名与网站/域名注册/故障处理/域名注册相关/域名注册时显示 “域名有被拦截访问的风险”.md
+++ b/product/域名与网站/域名注册/故障处理/域名注册相关/域名注册时显示 “域名有被拦截访问的风险”.md
@@ -6,7 +6,7 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/2e4c25fc4d4670e2750ccbcc98b7ab0b.png)
 
 ## 可能原因
-该域名曾被大量用户投诉网站存在违规行为，被 QQ、QQ 浏览器、电脑管家、微信等拦截访问。域名过期释放后可以再次注册，但仍有被拦截访问的风险。
+该域名曾被大量用户投诉网站存在违规行为，被 QQ、QQ 浏览器、电脑管家、微信等拦截访问。域名过期释放后可以再次注册，但仍有被拦截访问的风险。如下图所示：
 ![微信拦截页面示意图](https://qcloudimg.tencent-cloud.cn/raw/8553d21f4faebe419c7cb9fe8f92b2fa.png)
 
 ## 解决办法
