--- a/product/数据库/云数据库SQL Server/操作指南/维护管理实例/修改实例名称.md
+++ b/product/数据库/云数据库SQL Server/操作指南/维护管理实例/修改实例名称.md
@@ -2,9 +2,11 @@
 
 本文为您介绍如何通过控制台修改实例名称。
 
-## 实例名称说明
+## 实例 ID /名称说明
 - 主实例和只读实例均支持修改实例名称。
-- 实例名称由字母，数字、下划线组成，最长60个字符，不包含`,';"\--`。
+- 实例名称由中英文、数字、下划线组成，最长60个字符。
+- 实例 ID 支持快捷复制。
+![](https://qcloudimg.tencent-cloud.cn/raw/0c8d65cae2a054525c65a0545efeeac4.png)
 
 ## 在实例列表中修改实例名
 1. 登录 [SQL Server 控制台](https://console.cloud.tencent.com/sqlserver)。
