--- a/product/计算与网络/容器服务/云原生 etcd/创建集群.md
+++ b/product/计算与网络/容器服务/云原生 etcd/创建集群.md
@@ -11,7 +11,7 @@
 
 ## 操作步骤
 
-1. 登录 [容器服务控制台 ](https://console.cloud.tencent.com/tke2/overview)，单击左侧导航栏**云原生etcd**。
+1. 登录 [云原生 etcd 控制台](https://console.cloud.tencent.com/tke2/etcd/list)。
 2. 进入“etcd 集群”列表页面，在页面上方选择需创建 etcd 集群的地域，单击**新建**。如下图所示：
 ![](https://main.qcloudimg.com/raw/eb41336659b7e41552495b6ab3b5a6d8.png)
 
