--- a/product/数据库/云数据库SQL Server/操作指南/监控与告警/查看监控图表.md
+++ b/product/数据库/云数据库SQL Server/操作指南/监控与告警/查看监控图表.md
@@ -9,9 +9,11 @@
 ## [查看监控信息](id:ckjkxx)
 1. 登录 [SQL Server 控制台](https://console.cloud.tencent.com/sqlserver)。
 2. 在上方选择地域，找到所需实例，单击实例 ID 或**操作**列的**管理**，进入实例管理页。
-![](https://qcloudimg.tencent-cloud.cn/raw/3bb7a0be93f6fb3fa7879389c90b9876.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/6b26082b45ee443107b8b2b957363c88.png)
 3. 在实例管理页，选择**系统监控**页，可对各项监控指标进行查阅。
 ![](https://qcloudimg.tencent-cloud.cn/raw/9c54131bd430bb732e197fbb7f84fc6f.png)
+>?您也可以在实例列表，找到需要查看监控的实例，单击其监控图标快捷查看该实例的监控情况。
+>![](https://qcloudimg.tencent-cloud.cn/raw/e2f16097a0f249ec26f11e186e907044.png)
 
 ## 全屏显示图表
 您可以将单个指标进行全屏显示，方便更清晰的预览指标数据。
