--- a/product/安全服务/BGP 高防 IP/高防IP新版/最佳实践/遭受攻击后如何向网监报案.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/最佳实践/遭受攻击后如何向网监报案.md
@@ -1,4 +1,4 @@
-当业务遭受 DDoS 网络攻击时，推荐在采用 DDoS 高防 IP 服务来保障您的业务安全与稳定的同时，建议向网监部门进行报案。
+当业务遭受 DDoS 网络攻击时，推荐在采用 DDoS 高防 IP 服务来保障您的业务安全与稳定的同时，向网监部门进行报案。
 
 ## 报案流程
 <dx-steps>
