--- a/product/安全服务/BGP 高防 IP/高防IP新版/最佳实践/遭受攻击后如何向网监报案.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/最佳实践/遭受攻击后如何向网监报案.md
@@ -7,7 +7,12 @@
 - 正式立案后，腾讯云会配合网监部门接口人提供攻击取证。	
 </dx-steps>
 
->?具体立案标准可向当地的网监部门进行咨询。
+
+
+<dx-alert infotype="explain" title="">
+具体立案标准可向当地的网监部门进行咨询。
+</dx-alert>
+
 	
 
 
