--- a/product/安全服务/BGP 高防 IP/高防IP新版/操作指南/防护概览.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/操作指南/防护概览.md
@@ -34,7 +34,7 @@
 
 ### 查看高防 IP 实例统计
 1.	登录 [DDoS 防护（新版）控制台](https://console.cloud.tencent.com/ddos/dashboard/overview)，在左侧导航栏中，单击**防护概览** > **防护总览**，进入防护总览页面。
-2. 在高防实例统计模块中，展示高防 IP 资源的安全状态，可以快速全面了解风险业务分部。
+2. 在高防实例统计模块中，展示高防 IP 资源的安全状态，可以快速全面了解风险业务分布。
 ![](https://qcloudimg.tencent-cloud.cn/raw/11ba29a29bad74e00901940d67baddcd.png)
 
 ### 查看近期安全事件
