--- a/product/安全服务/BGP 高防 IP/高防IP新版/操作指南/防护概览.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/操作指南/防护概览.md
@@ -27,7 +27,7 @@
     - IP 总数：当前全部业务 IP 总数，包括基础防护的业务 IP、接入高防包的业务 IP 和高防 IP 实例。
     - 已防护 IP 数：接入高防包的业务 IP 和高防 IP 实例。
     - 封堵 IP 数：被屏蔽所有外网访问的业务 IP 数。包括基础防护的业务 IP、接入高防包的业务 IP 和高防 IP 实例。
-3. 在防御态势模块的防护趋势中，展示一周内全量业务受攻击总次数的，可以快速了解近期攻击状态分布情况。
+3. 在防御态势模块的防护趋势中，展示一周内全量业务受攻击总次数，可以快速了解近期攻击状态分布情况。
 ![](https://qcloudimg.tencent-cloud.cn/raw/d7059a7f5481277cd08996b1e9f0ba5d.png)
 3. 在防御态势模块的防护建议中，展示基础防护状态下受到攻击的业务 IP，提示接入高级防护。方便用户快速为被攻击 IP 接入高级防护，保证业务安全。
 ![](https://qcloudimg.tencent-cloud.cn/raw/3b6be9d490b7bace48b070c05a8cffd0.png)
