--- a/product/安全服务/BGP 高防 IP/高防IP新版/快速入门/非网站业务接入.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/快速入门/非网站业务接入.md
@@ -41,8 +41,8 @@
 		
     例如高防 IP 为10.1.1.1，转发端口为1234，源站 IP 为10.2.2.2，源站端口为1234。本地通过`telnet`命令访问10.1.1.1:1234，`telnet`命令能连通则说明转发成功。
 - **使用域名访问的业务**
-    对于需要通过域名访问的业务，可通过修改本地hosts来验证配置是否生效。
-    a. 修改本地 hosts 文件，使本地对于被防护站点的请求经过高防。下面以 Windows 操作系统为配置本地hosts文件。
+    对于需要通过域名访问的业务，可通过修改本地 hosts 来验证配置是否生效。
+    a. 修改本地 hosts 文件，使本地对于被防护站点的请求经过高防。下面以 Windows 操作系统为例配置本地 hosts 文件。
     打开本地计算机 `C:\Windows\System32\drivers\etc `路径下的 hosts 文件，在文末添加如下内容：
 ```
 <高防 IP 地址> <被防护网站的域名>
