--- a/product/安全服务/主机安全/操作指南/专家服务.md
+++ b/product/安全服务/主机安全/操作指南/专家服务.md
@@ -127,10 +127,10 @@
 ### 服务列表
 可查看任务ID，护网天数，服务启动时间，服务结束时间，服务状态（未启动、服务中、已完成、已销毁），操作（下载服务报告）。
 
-#### 启动护网
-想要启动旗舰重保，可在 [服务列表](https://console.cloud.tencent.com/cwp/master/protectNet) 单击**启动护网**进行留言，或直接联系专属安全助手启动。
+#### 启动重保
+想要启动旗舰重保，可在 [服务列表](https://console.cloud.tencent.com/cwp/master/protectNet) 单击**启动重保**进行留言，或直接联系专属安全助手启动。
 ![](https://main.qcloudimg.com/raw/8e5363d20f7f892b76e589647ba45d15.png)
-在启动护网弹窗中，简要描述您当前遇到的问题及需要安全技术专家为您提供什么支持。
+在启动重保弹窗中，简要描述您当前遇到的问题及需要安全技术专家为您提供什么支持。
 ![](https://qcloudimg.tencent-cloud.cn/raw/9d6efdf9898527229dc5511ce423fe04.png)
 
 #### 筛选
