--- a/product/安全服务/BGP 高防 IP/高防IP新版/常见问题/攻击相关问题.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/常见问题/攻击相关问题.md
@@ -17,11 +17,11 @@
 - 应用层攻击：常见攻击类型包括 DNS Flood 攻击、HTTP Flood 攻击及CC 攻击；这类攻击以消耗服务器处理性能从而达到拒绝服务的目的。
 
 ### 在哪里可以查看服务器被攻击的日志？
-在 [防护概览](https://console.cloud.tencent.com/ddos/antiddos-advanced/overview/ddos) 页面，可查看服务器在不同时间维度下的攻击日志。
+在 [防护概览](https://console.cloud.tencent.com/ddos/dashboard/advanced) 页面，可查看服务器在不同时间维度下的攻击日志。
 
 ### 攻击源 IP，哪里可以查看？
-在 [防护概览](https://console.cloud.tencent.com/ddos/antiddos-advanced/overview/ddos) 页面，选择想查看的攻击事件，单击**攻击详情**，支持查看攻击源信息、攻击源地区、产生的攻击流量及攻击包量大小。
-![](https://main.qcloudimg.com/raw/c4d2f863175410d86d7625ed51a3c774.png)
+在 [防护概览](https://console.cloud.tencent.com/ddos/dashboard/advanced) 页面的最近安全事件模块中，选择想查看的攻击事件，单击**查看详情**，支持查看攻击源信息、攻击源地区、产生的攻击流量及攻击包量大小。
+![](https://qcloudimg.tencent-cloud.cn/raw/249712e132a45dc272ff566eccbac645.png)
 
 ### 轻量服务器被 DDoS 攻击，怎么办？
 腾讯云内用户，购买[ DDoS 高防 IP ](https://cloud.tencent.com/document/product/1014/44082) 能有效抵御 DDoS 攻击，保证您的服务器与业务正常运作。
