--- a/product/企业应用/腾讯电子签 SaaS 版/操作指南/企业或员工账号管理/变更企业超级管理员.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/操作指南/企业或员工账号管理/变更企业超级管理员.md
@@ -1,8 +1,7 @@
 腾讯电子签控制台已上线修改企业超级管理员功能，具体操作步骤如下：
 
 ## 功能入口
-企业原超级管理员登录电脑端控制台，登录地址请参见 [腾讯电子签登录页](https://ess.tencent.cn/login) 。
-在**企业中心** > **超级管理员**一行，单击**修改**。
+企业原超级管理员登录 [电脑端控制台](https://ess.tencent.cn/login)，在**企业中心** > **超级管理员**一行，单击**修改**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/50b2f5de64a84657c782aebb65fe1ad3.png)
 >!该入口仅向企业原超级管理员开放。
 
