--- a/product/互联网中间件/腾讯云微服务引擎/服务治理中心/控制台操作指南/北极星鉴权.md
+++ b/product/互联网中间件/腾讯云微服务引擎/服务治理中心/控制台操作指南/北极星鉴权.md
@@ -1,10 +1,10 @@
 ## 基本概念
 微服务引擎的北极星场景下与账号和用户相关的概念如下：
-- **主账号**：也可称为主用户，是所有北极星资源的拥有者，对所有北极星资源有操作权限。在创建TSE引擎的时候，TSE 默认会创建名称为**polaris**的主账户。
+- **主账号**：也可称为主用户，是所有北极星资源的拥有者，对所有北极星资源有操作权限。在创建 TSE 引擎的时候，TSE 默认会创建名称为 **polaris** 的主账户。
 - **子账号**：主账户创建的协作账户。
 - **用户组**：北极星的用户组概念，是一组具有相同权限的用户。主账号可以通过创建用户组批量对用户进行授权与管理。**用户组只能由主账号创建和授权。**
 - **授权**：主用户可以管理所有子用户以及用户分组的写权限。子用户可将自己拥有写权限的资源权限分配给其他子用户或者用户组。
-- **token**：资源权限将通过token进行控制和管理，用户与用户组均可生成。
+- **token**：资源权限将通过 token 进行控制和管理，用户与用户组均可生成。
 
 ## 操作场景
 使用 Polarismesh(北极星) 的鉴权功能，您可以清晰地管理资源与用户的访问权限。北极星基于**命名空间**和**服务**资源维度实现权限管控。
@@ -17,26 +17,31 @@
 主账号至少拥有一个 Polarismesh 引擎实例。若您没有，请前往 [创建引擎](https://cloud.tencent.com/document/product/1364/65866)。
 
 ## 操作步骤
-### 步骤一：开启鉴权模式
+### 步骤1：开启鉴权模式
 1. 使用腾讯云账号登录 [TSE控制台](https://console.cloud.tencent.com/tse)，单击 Polarismesh，进入北极星引擎实例管理页面。
 2. 单击已有的北极星**引擎实例**，进入北极星引擎控制台，在左侧导航栏中，选择**基本信息**，进入引擎基本信息管理页面。
-3. 在**鉴权**卡片中，单击**服务鉴权**的开关按钮。![](https://qcloudimg.tencent-cloud.cn/raw/adacd0d5e0a9c63ca6ca5a73c32228d1.png)
-4. 单击**确认**开启服务鉴权后，子账号或用户组进行访问控制台、访问北极星资源等操作时，都会需要使用token鉴权，没有配置token的客户端将无法注册服务。只有在服务鉴权开启的情况下，控制台左侧的导航栏才会出现**权限管理**选项。
+3. 在**鉴权**卡片中，单击**服务鉴权**的开关按钮。
+![](https://qcloudimg.tencent-cloud.cn/raw/1aa26b025ca26e63e09ca01280101c26.png)
+4. 单击**确认**开启服务鉴权后，子账号或用户组进行访问控制台、访问北极星资源等操作时，都会需要使用 token 鉴权，没有配置 token 的客户端将无法注册服务。只有在服务鉴权开启的情况下，控制台左侧的导航栏才会出现**权限管理**选项。
 
-### 步骤二：创建子账户
-1. 进入北极星引擎控制台，单击顶部导航栏的**访问控制**，查看北极星**控制台地址**以及**主账户默认登录信息**。![](https://qcloudimg.tencent-cloud.cn/raw/69d5ad577329a3a06406d01e627ae0c2.png)
+### 步骤2：创建子账户
+1. 进入北极星引擎控制台，单击顶部导航栏的**访问控制**，查看北极星**控制台地址**以及**主账户默认登录信息**。
+![](https://qcloudimg.tencent-cloud.cn/raw/a30fd82ce040cc357ffcabe2b15bc175.png)
 2. 登录北极星控制台后，在左侧导航栏中，选择**用户**，进入用户列表页面。
-3. 在用户列表页面中，点击左上角**新建**。![](https://qcloudimg.tencent-cloud.cn/raw/8e19c8e06755d37435be44eaa4c3a13f.png)
-4. 主账号可在**权限管理**页面中查看所有用户或用户组的 token，并且对用户、用户组和权限策略做管理和编辑。![](https://qcloudimg.tencent-cloud.cn/raw/4a77d46249d47a2e3062e2d94baa8b57.png)
+3. 在用户列表页面中，点击左上角**新建**。
+![](https://qcloudimg.tencent-cloud.cn/raw/44c27cc4d56675349905be6c8d7db486.png)
+4. 主账号可在**权限管理**页面中查看所有用户或用户组的 token，并且对用户、用户组和权限策略做管理和编辑。
+![](https://qcloudimg.tencent-cloud.cn/raw/46e0d9d91a940a2459bf0204c63ea103.png)
 
-### 步骤三：关联用户组
-1. 进入北极星引擎控制台，单击顶部导航栏的**访问控制**，查看北极星**控制台地址**以及**主账户默认登录信息**。![](https://qcloudimg.tencent-cloud.cn/raw/69d5ad577329a3a06406d01e627ae0c2.png)
+### 步骤3：关联用户组
+1. 进入北极星引擎控制台，单击顶部导航栏的**访问控制**，查看北极星**控制台地址**以及**主账户默认登录信息**。
+![](https://qcloudimg.tencent-cloud.cn/raw/56ae404f5840c254dd48072153ed8fe7.png)
 2. 登录北极星控制台后，在左侧导航栏中，选择**用户组**，进入用户组列表页面。
-1、在用户组列表页面，点击左上角点击**新建用户组**。![](https://qcloudimg.tencent-cloud.cn/raw/06f3f113f3dea87bc8a4b39333548b6a.png)
-2. 根据您的需要，为用户组命名，并且关联子账号。![](https://qcloudimg.tencent-cloud.cn/raw/93a1c09bc4d015889cf960cce1c745c8.jpg)
-3. **只有主账号可对用户组进行编辑操作**。
+ 1. 在用户组列表页面，单击左上角**新建用户组**。![](https://qcloudimg.tencent-cloud.cn/raw/06f3f113f3dea87bc8a4b39333548b6a.png)
+ 2. 根据您的需要，为用户组命名，并且关联子账号。![](https://qcloudimg.tencent-cloud.cn/raw/93a1c09bc4d015889cf960cce1c745c8.jpg)
+>?**只有主账号才可对用户组进行编辑操作**。
 
-### 步骤四：授权操作
+### 步骤4：授权操作
 您可以通过以下列表查看不同视角的授权操作。
 <dx-tabs> 
 ::: 主账号视角
@@ -45,12 +50,14 @@
 3. 单击左侧导航栏**权限管理**，进入权限管理页面。选择**权限策略**页签，单击新建策略。填写策略基本信息，在角色栏可以选择需要授权用户或用户组，单击**下一步**选择授权的资源。![](https://qcloudimg.tencent-cloud.cn/raw/04586e2659544cf88d32067328b144cd.jpg)
 4. 在资源栏可选择北极星的资源类型，包括命名空间、服务等资源，主账号可对所有资源进行操作。![](https://qcloudimg.tencent-cloud.cn/raw/741c0c6fdfc1c645fcd4a26148620b2d.png)
 5. 单击**下一步**，进入预览界面，详细展示该策略涉及的用户、用户组以及资源。确认信息无误后，单击**完成**。
-6. 主账号可在权限策略列表查阅现有的权限策略，可单击**编辑**进行授权或删除等操作。![](https://qcloudimg.tencent-cloud.cn/raw/29b751530c5d6c4c969878fecc10b8db.png)
+6. 主账号可在权限策略列表查阅现有的权限策略，可单击**编辑**进行授权或删除等操作。
+![](https://qcloudimg.tencent-cloud.cn/raw/2fa531a34fa9f4f835cf19f625d4fa9a.png)
 
 :::
 ::: 子账号视角
 1. 仅在主账号开启了**鉴权**模式下，使用腾讯云子账号登录 [TSE控制台](https://console.cloud.tencent.com/tse)，进入北极星控制台，左侧的导航栏才会出现**权限管理**选项，单击可进入权限管理列表。
-2. 子用户**无法**新建和编辑权限策略，只能查看现有权限策略。![](https://qcloudimg.tencent-cloud.cn/raw/18cefcc95a66fd67eb682397ab98f9a2.png)
+2. 子用户**无法**新建和编辑权限策略，只能查看现有权限策略。
+![](https://qcloudimg.tencent-cloud.cn/raw/21ddcdd0d0751ca3eeb1d3392735ec77.png)
 3. 子用户可将自己拥有写权限的资源权限分配给其他子用户或者用户组。具体操作请参见**资源视角**。
 	
 :::
@@ -75,7 +82,7 @@
 	- 子用户没有创建资源的情况下，默认策略中资源为空。
 	- 用户创建资源后，自动添加资源至默认策略。
 	- 删除资源时，引擎将自动把该资源从默认策略中删除。
-5. 如果之前向Polarismesh 引擎实例导入过腾讯云子账户，建议尽快使用北极星主账户修改已有子账户的登录密码。已有子账户的登录信息如下
+5. 如果之前向 Polarismesh 引擎实例导入过腾讯云子账户，建议尽快使用北极星主账户修改已有子账户的登录密码。已有子账户的登录信息如下
     - 用户名：**{ 腾讯云子账户用户名称 }**
     - 密码：polarismesh@2022
 
