--- a/product/安全服务/边缘安全加速平台/最佳实践/视频拖拽.md
+++ b/product/安全服务/边缘安全加速平台/最佳实践/视频拖拽.md
@@ -47,7 +47,7 @@ http://www.test.com/test.flv?start=10
 >?目前边缘安全加速平台控制台仅对部分用户开放，如需访问控制台，请 [联系我们](https://cloud.tencent.com/online-service) 开通权限。
 >
 2. 在规则引擎页面，选择所需站点，单击![img](https://qcloudimg.tencent-cloud.cn/raw/fe4d4900f8ad69d506adc49bdb70fa32.png)可按需配置视频拖拽规则。
-3. 在规则引擎页面，匹配类型 **Host**，THEN 选择**视频拖拽**，并按需配置其他参数，单击**保存发布**或**仅保存**。
+3. 在规则引擎页面，匹配类型 **Host**，操作选择**视频拖拽**，并按需配置其他参数，单击**保存发布**或**仅保存**。
 >?目前支持的匹配类型为 Host。
 >
 ![](https://qcloudimg.tencent-cloud.cn/raw/e8ecd94b0cfdff4fe94a74d913487c18.png)
