--- a/product/安全服务/边缘安全加速平台/最佳实践/分片回源.md
+++ b/product/安全服务/边缘安全加速平台/最佳实践/分片回源.md
@@ -22,7 +22,7 @@
 >?目前边缘安全加速平台控制台仅对部分用户开放，如需访问控制台，请 [联系我们](https://cloud.tencent.com/online-service) 开通权限。
 >
 2. 在规则引擎页面，选择所需站点，单击![img](https://qcloudimg.tencent-cloud.cn/raw/fe4d4900f8ad69d506adc49bdb70fa32.png)可按需配置分片回源规则。
-3. 在规则引擎页面，THEN 选择**分片回源**，并按需配置其他参数，单击**保存发布**或**仅保存**。
+3. 在规则引擎页面，操作选择**分片回源**，并按需配置其他参数，单击**保存发布**或**仅保存**。
 >!目前支持的匹配类型为 Host，URL Path 和文件后缀。
 >
 ![](https://qcloudimg.tencent-cloud.cn/raw/6bf8410e54b26f40362e688502c43534.png)
