--- a/product/企业应用/腾讯电子签 SaaS 版/操作指南/企业或员工账号管理/变更企业超级管理员.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/操作指南/企业或员工账号管理/变更企业超级管理员.md
@@ -1,23 +1,23 @@
-腾讯电子签控制台已上线修改企业超级管理员功能，具体操作步骤如下：
+腾讯电子签控制台已上线修改企业超级管理员功能，具体操作请参见如下步骤。
 
 ## 功能入口
-企业原超级管理员登录电脑端 [腾讯电子签控制台](https://ess.tencent.cn/login)，在**企业中心** > **超级管理员**一行，单击**修改**。
-![](https://qcloudimg.tencent-cloud.cn/raw/50b2f5de64a84657c782aebb65fe1ad3.png)
+企业原超级管理员登录电脑端 [腾讯电子签控制台](https://ess.tencent.cn/login)，在**企业中心** > **超级管理员**，单击![](https://qcloudimg.tencent-cloud.cn/raw/cdc18dc20ba1b059bf1bea0f57103e13.png)即可修改超级管理员名称。
+![](https://qcloudimg.tencent-cloud.cn/raw/3d39b77e1dd3f278a340d20e8c011dbb.png)
 >!该入口仅向企业原超级管理员开放。
 
 
 ## 超级管理员更换步骤
 ### 步骤1：验证用户身份
 按照页面指引，请系统原超级管理员使用微信扫描二维码，并在手机上根据页面指引完成人脸核验。
-<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/b5713cb60100830554598ac9c5e4402e.png" />
+<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/e30bd588c418517206ff3b8f467dfe50.png" />
 
 ### 步骤2：选择新超级管理员
 人脸核验通过后，单击**选择员工**，在企业组织架构中，选择新超级管理员。
-<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/d3cc37a80073832a2f677dd3e6b79693.png" />
+<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/50e5c14c6eec1751a4e048276e01d11a.png" />
 >!新超级管理员必须已在企业组织架构内并完成实名认证，添加员工指引请参见 [组织架构管理](https://cloud.tencent.com/document/product/1323/58495#.E6.AD.A5.E9.AA.A43.EF.BC.9A.E5.88.9B.E5.BB.BA.E4.BC.81.E4.B8.9A.E5.91.98.E5.B7.A5.E8.B4.A6.E5.8F.B7) 文档。
 
 ### 步骤3：授权新超级管理员
-<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/0bc11bb705f01e3ffbda14a76296a0bf.png" />
+<img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/b04d62f253383cdf6ca6722396c4ef68.png" />
 
 请在页面中单击**授权证书**下载《腾讯电子签超级管理员变更授权书》，下载后请根据授权书要求完成相应信息填写，并加盖企业公章后在系统中进行上传。
 
