--- a/product/大数据与AI/互动白板/互动白板3.0 Demo体验.md
+++ b/product/大数据与AI/互动白板/互动白板3.0 Demo体验.md
@@ -29,13 +29,13 @@
 ## 产品优势
 
 1、无限白板
-在一块可以无限延伸、任意缩放的在线白板上，利用便签/画笔/图形等各种各样的元素进行创作 - 从设计一场课堂或培训，记录和分享你的想法，让协作不再受限。
+在一块可以无限延伸、任意缩放的在线白板上，利用便签/画笔/图形等各种各样的元素进行创作 - 从设计一场课堂或培训，记录和分享您的想法，让协作不再受限。
 
 2、实时互动
 让所有人汇聚到一个实时互动的虚拟空间 -利用文档课件、音视频课件、批注、便签、演讲、图形、画笔涂鸦等一系列能力，轻松组织一场高效的在线教学或者研讨会 - 让每一个人员都参与到创作和讨论，突破空间的限制。
 
 3、扩展应用与插件
-支持业务层在协同白板demo上扩展更多丰富的扩展应用与插件方便实现各种需求，比如：在线编程、笔记、IM聊天、音视通话、桌面共享等。
+支持业务层在协同白板demo上扩展更多丰富的扩展应用与插件方便实现各种需求，例如：在线编程、笔记、IM聊天、音视通话、桌面共享等。
 
 ## 技术优势
 
