--- a/product/安全服务/边缘安全加速平台/最佳实践/分片回源.md
+++ b/product/安全服务/边缘安全加速平台/最佳实践/分片回源.md
@@ -3,9 +3,9 @@
 
 #### 为什么分片回源可以提升大文件分发效率？
 
-节点在缓存资源时，为提高缓存效率，会将资源文件分片缓存（所有分片在节点的缓存时间相同，遵循 节点缓存过期 TTL 配置），同时支持 Range 请求。若客户端请求时携带 HTTP 头部`Range: bytes = 0-999`，则只返回文件的前1000个字节，并非整个文件。
+节点在缓存资源时，为提高缓存效率，会将资源文件分片缓存（所有分片在节点的缓存时间相同，遵循节点缓存过期 TTL 配置），同时支持 Range 请求。若客户端请求时携带 HTTP 头部`Range: bytes = 0-999`，则只返回文件的前1000个字节，并非整个文件。
 
-开启分片回源后，若客户端请求的并非整个文件，仅部分文件，且该部分文件在节点的缓存已过期，需回源获取最新的资源。节点会根据客户端请求分片回源，即仅回源拉取客户端需要的部分文件缓存至节，同时返回给用户。有效减少回源消耗，提示了整体响应速度。
+开启分片回源后，若客户端请求的并非整个文件，仅部分文件，且该部分文件在节点的缓存已过期，需回源获取最新的资源。节点会根据客户端请求分片回源，即仅回源拉取客户端需要的部分文件缓存至节点，同时返回给用户。有效减少回源消耗，提升了整体响应速度。
 
 若未开启分片回源，即便客户端请求的是部分文件，节点回源时仍会拉取整个文件缓存至节点，同时返回给客户端请求的部分文件。
 
