--- a/product/大数据与AI/互动白板/互动白板2.0 Demo体验.md
+++ b/product/大数据与AI/互动白板/互动白板2.0 Demo体验.md
@@ -10,7 +10,7 @@
 <th style="text-align:center">Web</th>
 </tr>
 <tr>
-<td style="text-align:center"><img src="https://main.qcloudimg.com/raw/6cf3b2864c6ad847f380e4877f56ed93.png" width="150"/></td>
+<td style="text-align:center"><img src="https://qcloudimg.tencent-cloud.cn/raw/2591bb0ad862c9632f0ddc539d9d52f4.png" width="150"/></td>
 <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/98569a546d085544b5171670e6e60c11.png" width="150"/></td>
 <td style="text-align:center"><img src="https://main.qcloudimg.com/raw/b660a6c57aecebf6a0c749a1daf8532a.jpg" width="150"/></td>
 <td style="text-align:center">
