--- a/product/安全服务/主机安全/操作指南/密码破解.md
+++ b/product/安全服务/主机安全/操作指南/密码破解.md
@@ -31,19 +31,21 @@
 [](id:bmd)
 1. 设置白名单，登录 [主机安全控制台](https://console.cloud.tencent.com/cwp/manage/crack)，在左侧导航中，选择**入侵检测** > **密码破解**，进入密码破解页面。
 2. 在密码破解页面，单击**白名单管理**，进入白名单管理页面。
-2. 在白名单管理页面，单击**创建白名单**，进入创建白名单页面中。[](id:bmd)
-![](https://main.qcloudimg.com/raw/a4baf97cc1073bb4fd8b6b57031d0e90.png)
-3. 在创建白名单页面中，填写来源 IP 及生效范围。
+2. 在白名单管理页面，单击**添加白名单**，进入创建白名单页面中。
+![](https://qcloudimg.tencent-cloud.cn/raw/9b6f0c8884059cfd7670406e4815d2fd.png)
+3. 在新增白名单页面中，填写来源 IP 及生效范围。
 >!
 >- 添加白名单后，该来源 IP 的密码破解行为将不会被阻断与告警，请慎重操作。若有非白名单来源 IP 尝试登录，并命中暴力破解规则时，系统将自动发出异常告警或阻断。
 >- 当来源 IP 为腾讯云内网 IP 时，不论有没有加入白名单，均不发生阻断。 
 >
+![](https://qcloudimg.tencent-cloud.cn/raw/2546c3999557a2b4dff88dcb5683b082.png)
+**参数说明：**
 	- 来源 IP：支持填写单个 IP、IP 范围（如1.1.1.1-1.1.1.10）或 IP 段（如1.1.1.0/24）。
 	- 生效范围：
 		- 全部服务器（**请谨慎选择**）：将对用户 AppID 下所有服务器添加信任该白名单条件。
 		- 自定义服务器范围：自定义选择添加信任该白名单条件的服务器范围。
 	- 备注：建议您输入相关规则备注。
-![](https://main.qcloudimg.com/raw/7ab131809bcb74ec7a609c6ea7254a3f.png)
+
 
 ## 查看密码破解事件
 登录 [主机安全控制台](https://console.cloud.tencent.com/cwp/manage/crack)，在左侧导航中，选择**入侵检测** > **密码破解**，进入密码破解页面，所有暴力破解事件将会在暴力破解列表中展示。
