--- a/product/安全服务/主机安全/操作指南/密码破解.md
+++ b/product/安全服务/主机安全/操作指南/密码破解.md
@@ -75,8 +75,8 @@
 ## 密码破解事件处置指引
 1. 当用户接收密码破解事件告警时，登录 [主机安全控制台](https://console.cloud.tencent.com/cwp/manage/crack)，在左侧导航中，选择**入侵检测** > **密码破解**，进入密码破解页面。
 2. 查看告警事件列表中的对应攻击来源 IP。
-	- 若确认是可信来源 IP，用户需在该事件右侧操作栏中，单击**加白名单**，设置加白名单条件和生效范围**（请用户谨慎添加白名单）**。配置成功后，预计5分钟内生效，后续来自该来源 IP 的密码破解行为将不再进行告警或者阻断。
-![](https://qcloudimg.tencent-cloud.cn/raw/f8eb04055d1bcb9fbd95e87b1da0fdaf.png)
+	- 若确认是可信来源 IP，用户需在该事件右侧操作栏中，单击**处理** > **加白名单**，设置加白名单条件和生效范围**（请用户谨慎添加白名单）**。配置成功后，预计5分钟内生效，后续来自该来源 IP 的密码破解行为将不再进行告警或者阻断。
+![](https://qcloudimg.tencent-cloud.cn/raw/c8f7bf40bea56ca553ec9b4aebf0e601.png)
 	- 若确认是不可信来源 IP，且服务器已被攻击者密码破解成功。
 		1. 首先确认当前服务器的主机安全是否已升级为专业版或旗舰版，若未升级为专业版或旗舰版，建议用户在该事件右侧操作栏中，单击**升级版本**，升级为专业版或旗舰版主机安全。
 ![](https://qcloudimg.tencent-cloud.cn/raw/1f3156263fad8224c84cc2a1795e925c.png)
