--- a/product/企业应用/腾讯电子签 SaaS 版/操作指南/企业或员工账号管理/变更企业超级管理员.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/操作指南/企业或员工账号管理/变更企业超级管理员.md
@@ -1,7 +1,7 @@
 腾讯电子签控制台已上线修改企业超级管理员功能，具体操作请参见如下步骤。
 
 ## 功能入口
-企业原超级管理员登录电脑端 [腾讯电子签控制台](https://ess.tencent.cn/login)，在**企业中心** > **超级管理员**，单击![](https://qcloudimg.tencent-cloud.cn/raw/cdc18dc20ba1b059bf1bea0f57103e13.png)即可修改超级管理员名称。
+企业原超级管理员登录电脑端 [腾讯电子签控制台](https://ess.tencent.cn/login)，在**企业中心** > **超级管理员**，单击![](https://qcloudimg.tencent-cloud.cn/raw/cdc18dc20ba1b059bf1bea0f57103e13.png)即可进入修改超级管理员流程。
 ![](https://qcloudimg.tencent-cloud.cn/raw/3d39b77e1dd3f278a340d20e8c011dbb.png)
 >!该入口仅向企业原超级管理员开放。
 
