--- a/product/企业应用/腾讯电子签 SaaS 版/操作指南/企业或员工账号管理/变更企业超级管理员.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/操作指南/企业或员工账号管理/变更企业超级管理员.md
@@ -1,12 +1,12 @@
 腾讯电子签控制台已上线修改企业超级管理员功能，具体操作请参见如下步骤。
 
 ## 功能入口
-企业原超级管理员登录电脑端 [腾讯电子签控制台](https://ess.tencent.cn/login)，在**企业中心** > **超级管理员**，单击![](https://qcloudimg.tencent-cloud.cn/raw/cdc18dc20ba1b059bf1bea0f57103e13.png)即可进入修改超级管理员流程。
+企业原超级管理员登录电脑端 [腾讯电子签控制台](https://ess.tencent.cn/login)，在**企业中心** > **超级管理员**，单击![](https://qcloudimg.tencent-cloud.cn/raw/cdc18dc20ba1b059bf1bea0f57103e13.png)即可进入变更超级管理员流程。
 ![](https://qcloudimg.tencent-cloud.cn/raw/3d39b77e1dd3f278a340d20e8c011dbb.png)
 >!该入口仅向企业原超级管理员开放。
 
 
-## 超级管理员更换步骤
+## 超级管理员变更步骤
 ### 步骤1：验证用户身份
 按照页面指引，请系统原超级管理员使用微信扫描二维码，并在手机上根据页面指引完成人脸核验。
 <img style="width:700px; max-width: inherit;" src="https://qcloudimg.tencent-cloud.cn/raw/e30bd588c418517206ff3b8f467dfe50.png" />
