--- a/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/快速入门.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Java SDK/快速入门.md
@@ -1,7 +1,7 @@
 ## 下载与安装
 
 #### 相关资源
-- 对象存储服务的 XML Java SDK 源码下载地址：[XML Java SDK](https://github.com/tencentyun/cos-java-sdk-v5)。
+- 对象存储（Cloud Object Storage，COS）服务的 XML Java SDK 源码下载地址：[XML Java SDK](https://github.com/tencentyun/cos-java-sdk-v5)。
 - SDK 快速下载地址：[XML Java SDK](https://cos-sdk-archive-1253960454.file.myqcloud.com/cos-java-sdk-v5/latest/cos-java-sdk-v5.zip)。
 - 示例 Demo 下载地址：[COS XML Java SDK 示例](https://github.com/tencentyun/cos-java-sdk-v5/tree/master/src/main/java/com/qcloud/cos/demo)。
 - SDK 文档中的所有示例代码请参见 [SDK 代码示例](https://github.com/tencentyun/cos-snippets/tree/master/Java)。
@@ -9,10 +9,10 @@
 - SDK 常见问题请参见：[Java SDK 常见问题](https://cloud.tencent.com/document/product/436/50746)。
 
 
->? 
+>?
+> - 为了避免不必要的繁琐代码排查与程序定位问题，如果您初次使用 COS 或者数据量不大，推荐使用更加友好、图形化界面的 [控制台](https://cloud.tencent.com/document/product/436/11365)、[COSBrowser](https://cloud.tencent.com/document/product/436/11366)，或者可批量操作的命令行工具 [COSCLI](https://cloud.tencent.com/document/product/436/63143)。
+> - 如果您在使用 XML 版本 SDK 时遇到函数或方法不存在等错误，请先将 XML 版本 SDK 升级到最新版再重试。如果您仍在使用 JSON 版本 SDK，请 [升级到 XML Java SDK](https://cloud.tencent.com/document/product/436/31355)。
 >
->- 为了避免不必要的繁琐代码排查与程序定位问题，如果您初次使用对象存储 COS，或者数据量不大，推荐使用更加友好、图形化界面的[控制台](https://cloud.tencent.com/document/product/436/11365)、[COSBrowser](https://cloud.tencent.com/document/product/436/11366),或者可批量操作的命令行工具 [COSCLI](https://cloud.tencent.com/document/product/436/63143)。
->- 如果您在使用 XML 版本 SDK 时遇到函数或方法不存在等错误，请先将 XML 版本 SDK 升级到最新版再重试。如果您仍在使用 JSON 版本 SDK，请 [升级到 XML Java SDK](https://cloud.tencent.com/document/product/436/31355)。
 
 
 #### 环境依赖
