--- a/product/安全服务/主机安全/操作指南/本地提权.md
+++ b/product/安全服务/主机安全/操作指南/本地提权.md
@@ -10,9 +10,9 @@
 ### 事件列表
 1. 登录 [主机安全控制台](https://console.cloud.tencent.com/cwp/manage/maliciousRequest)，在左侧导航栏，选择**入侵检测** > **本地提权**，进入本地提权的事件列表标签页。
 2. 在本地提权的“事件列表”标签页，可查看本地提权事件列表，并进行相关操作。
-	在“事件列表”标签页，可查看发生提权事件的服务器 IP/名称、提权用户、发现时间、状态（全部、待处理及白名单）、操作（详情、加入白名单及删除记录）等12个字段，展示列表详情信息可进行自定义。
-	- **筛选事件**：本地提权事件列表支持选择日期查看相应的事件，支持按关键字及标签查询（多个关键字用竖线 “|” 分隔，多个过滤标签用回车键分隔）事件，同时支持按状态（全部、待处理及已加白名单）筛选事件。
-![](https://qcloudimg.tencent-cloud.cn/raw/2d23de6643544495ec530217bb652c8b.png)
+	在“事件列表”标签页，可查看发生提权事件的服务器 IP/名称、提权用户、发现时间、状态、操作（详情、加入白名单及删除记录）等12个字段，展示列表详情信息可进行自定义。
+	- **筛选事件**：本地提权事件列表支持选择日期查看相应的事件，支持按关键字及标签查询（多个关键字用竖线 “|” 分隔，多个过滤标签用回车键分隔）事件，同时支持按状态、筛选事件。
+![](https://qcloudimg.tencent-cloud.cn/raw/12566272b3e240046521b9020d666206.png)
 	- **自定义设置列表字段**：在本地提权事件列表上方，单击<img src="https://main.qcloudimg.com/raw/9ebb9fa1652d9154137fa1d934329043.png" style="margin:0;">，可设置列表展示字段，选择完成后，单击**确定**，即可设置成功。
 ![](https://qcloudimg.tencent-cloud.cn/raw/73dc5c7d0c5eaf4f6c190b99d345f97e.png)
 	- **事件导出**：在本地提权事件列表上方，单击<img src="https://main.qcloudimg.com/raw/ac6451a8dab74a5cf57770ff8af30954.png" style="margin:0;">，可将本地提权事件列表导出。
