--- a/product/管理与支持/计费相关(new)/计费说明/云服务退货说明.md
+++ b/product/管理与支持/计费相关(new)/计费说明/云服务退货说明.md
@@ -17,7 +17,7 @@
 
 
 ### 退款金额及途径
-购买时使用的代金券不支持退还，购买时使用的非代金券费用按支付方式（现金/赠送金）及支付比例退还到支付方腾讯云账户。
+购买时使用的优惠券（包括代金券、现金券、折扣券）不支持退还，购买时使用的非优惠券费用按支付方式（现金/赠送金）及支付比例退还到支付方腾讯云账户。
 
 
 
@@ -47,11 +47,11 @@
 （3）基于使用套餐量计算
 已消耗金额 = 已消耗用量 * 单价 * 折扣（匹配系统当前折扣）
 
-购买时使用的代金券不支持退还，购买时使用的非代金券费用按支付方式（现金/赠送金）及支付比例退还到支付方腾讯云账户。
+购买时使用的优惠券（包括代金券、现金券、折扣券）不支持退还，购买时使用的非优惠券费用按支付方式（现金/赠送金）及支付比例退还到支付方腾讯云账户。
 
 
 ## 降配退款
-资源降配遵循**先退款再购买**原则，即降配退款金额 = 资源清退退款 - 资源新购费用。购买时使用的代金券不支持退还，使用的非代金券费用按支付方式（现金/赠送金）及支付比例退还到支付方腾讯云账户。
+资源降配遵循**先退款再购买**原则，即降配退款金额 = 资源清退退款 - 资源新购费用。购买时使用的优惠券（包括代金券、现金券、折扣券）不支持退还，购买时使用的非优惠券费用按支付方式（现金/赠送金）及支付比例退还到支付方腾讯云账户。
 - 资源清退退款：按照非全额退款规则计算退款金额。
 - 资源新购费用：按新购的价格及对应折扣进行计算购买金额。
 
