--- a/product/计算与网络/轻量应用服务器/最佳实践/使用宝塔面板腾讯云专版管理服务器.md
+++ b/product/计算与网络/轻量应用服务器/最佳实践/使用宝塔面板腾讯云专版管理服务器.md
@@ -8,6 +8,11 @@
 
 ## 说明事项
 - 本文以使用应用镜像“宝塔Linux面板 7.5.2 腾讯云专享版”为例，镜像可能会进行版本升级与更新，请您以购买页实际版本为准。
+- 宝塔应用安装在 `/www` 路径下，该路径权限设置为 root。您在执行相关命令时，需首先执行以下命令，切换为 root 帐户。
+```shell
+sudo -i
+```
+若您需修改 root 密码，可参考 [重置密码](https://cloud.tencent.com/document/product/1207/44575) 指定 root 用户后进行设置。
 - 当您已有宝塔 Linux 面板腾讯云专享版实例，且需使用新版本时。可登录实例，执行以下命令进行升级：
 ```shell
 wget -O install.sh http://download.bt.cn/install/plugin/tencent/install.sh && sh install.sh install
