--- a/product/互联网中间件/TDMQ CMQ 版/02 购买指南/价格总览.md
+++ b/product/互联网中间件/TDMQ CMQ 版/02 购买指南/价格总览.md
@@ -6,6 +6,7 @@
 ### API 调用价格
 
 消息队列 CMQ 版对 API 调用实行线性计价。**API 调用费用 =（发送消息 API 调用次数 + 消费消息 API 调用次数 + 消息确认调用次数）× API 调用单价**。
+> 如果为主题模型，则主题到订阅的投递也视为消费消息的行为，计算到**消费消息API调用次数**，如果一个主题有N个订阅，则计算N次。
 
 API 调用单价（单位：元/百万次调用）如下表所示：
 
