--- a/product/移动与通信/云开发低代码平台/购买指南/计费概述.md
+++ b/product/移动与通信/云开发低代码平台/购买指南/计费概述.md
@@ -2,8 +2,8 @@
 
 微搭面向所有用户提供团队版、企业版、旗舰版三个版本套餐，各套餐的功能说明请参见 [套餐详情定价](#price)。新套餐提供了更加丰富的 <a href="#newCapacity">新能力</a>，所有新用户可享有 1 个月免费试用，试用到期后可前往 [微搭购买页](https://buy.cloud.tencent.com/lowcode) 选择团队版/企业版配置进行购买。
 
-- <strong>团队版</strong>：原价 168 元/月，优惠折后价 88 元/月。快速开发小程序和零代码搭建业务数据管理应用，并可与外部系统打通。套餐内包含的应用运行的基础资源如文件、数据等，您可根据业务情况扩充购买。最多可添加 5 个 [企业内部用户](https://cloud.tencent.com/document/product/1301/67262)，超过将按照[用户阶梯价格](#license)收取费用。
-- <strong>企业版</strong>：原价 14040 元/年，优惠折后价 7998 元/年。提供复杂的企业应用系统搭建解决方案，快速搭建如项目管理、销售管理、商品管理等。企业版包含了团队版的所有功能，并支持与企业微信整合等多项高级能力。最多可添加 30 个 [企业内部用户](https://cloud.tencent.com/document/product/1301/67262)，超出将按照[用户阶梯价格](#license)收取费用。
+- <strong>团队版</strong>：原价 168 元/月，优惠折后价 88 元/月。快速开发小程序和零代码搭建业务数据管理应用，并可与外部系统打通。套餐内包含的应用运行的基础资源如文件、数据等，您可根据业务情况扩充购买。最多可添加 5 个 [企业内部用户](https://cloud.tencent.com/document/product/1301/67262)，超过将按照 [用户阶梯价格](#license) 收取费用。
+- <strong>企业版</strong>：原价 14040 元/年，优惠折后价 7998 元/年。提供复杂的企业应用系统搭建解决方案，快速搭建如项目管理、销售管理、商品管理等。企业版包含了团队版的所有功能，并支持与企业微信整合等多项高级能力。最多可添加 30 个 [企业内部用户](https://cloud.tencent.com/document/product/1301/67262)，超出将按照 [用户阶梯价格](#license) 收取费用。
 - <strong>旗舰版</strong>：支持独享模式私有化运行，专家经理对接业务分析，帮助企业高效落地数字化转型。超大容量无后顾之忧，高品质售后服务。请 [提交购买咨询](https://cloud.tencent.com/apply/p/xtuect0n2wm)，专家经理将会在一个工作日内联系您。如果您想要了解私有化部署，请前往 [私有化部署介绍](https://cloud.tencent.com/document/product/1301/70190)。
 
 <dx-alert infotype="explain" title="计费通知：">
@@ -27,8 +27,8 @@
 <tr>
 <td rowspan="3" style="width:12%">概览</td>
 <td style = "width:15%">业务场景</td>
-<td>快速开发小程序和Web应用，零代码搭建业务数据管理应用</td>
-<td>支持企微等SaaS能力集成，提供搭建复杂的企业系统解决方案</td>
+<td>快速开发小程序和 Web 应用，零代码搭建业务数据管理应用</td>
+<td>支持企微等 SaaS 能力集成，提供搭建复杂的企业系统解决方案</td>
 <td>企业独享模式，专家经理对接业务分析，帮助企业高效落地数字化转型</td>
 </tr>
 <tr>
@@ -265,11 +265,8 @@
 </tr>
 </tbody>
 </table>
-
-<dx-alert infotype="explain" title=""><ul style = "margin-bottom: 0px;">
-
-<li>注意：套餐内访问C端的外部用户，如匿名访客和小程序登录用户，数量不限，仅根据访问的基础资源（CDN 流量）进行收费。</li>
-</ul>
+<dx-alert infotype="notice" title="">
+套餐内访问 C 端的外部用户，如匿名访客和小程序登录用户，数量不限，仅根据访问的基础资源（CDN 流量）进行收费。
 </dx-alert>
 
 ### 基础资源扩充包[](id:resourcepack)
@@ -279,13 +276,64 @@
 微搭平台提供了以下几个不同梯度资源包，用户可根据业务实际情况按需选择：
 [](id:table1)
 
-| 资源包             | 资源包 A              | 资源包 B               | 资源包 C               | 资源包 D                | 资源包 E                | 更高规格                                                  |
-| ------------------ | --------------------- | ---------------------- | ---------------------- | ----------------------- | ----------------------- | --------------------------------------------------------- |
-| 文件量             | 2G                    | 10G                    | 50G                    | 100G                    | 700G                    | 不限                                                      |
-| 数据量             | 1G                    | 3G                     | 5G                     | 10G                     | 50G                     | 不限                                                      |
-| CDN 流量           | 4G                    | 25G                    | 50G                    | 150G                    | 1000G                   | 不限                                                      |
-| 推荐 DAU（仅参考） | 适用于 DAU50 以下应用 | 适用于 DAU100 以下应用 | 适用于 DAU500 以下应用 | 适用于 DAU1000 以下应用 | 适用于 DAU5000 以下应用 | 不限                                                      |
-| 价格               | 团队版免费赠送        | 30 元/月               | 104 元/月              | 390 元/月               | 2499 元/月              | [联系购买](https://cloud.tencent.com/apply/p/xtuect0n2wm) |
+<table>
+<thead>
+<tr>
+<th>资源包</th>
+<th>资源包 A</th>
+<th>资源包 B</th>
+<th>资源包 C</th>
+<th>资源包 D</th>
+<th>资源包 E</th>
+<th>更高规格</th>
+</tr>
+</thead>
+<tbody><tr>
+<td>文件量</td>
+<td>2G</td>
+<td>10G</td>
+<td>50G</td>
+<td>100G</td>
+<td>700G</td>
+<td>不限</td>
+</tr>
+<tr>
+<td>数据量</td>
+<td>1G</td>
+<td>3G</td>
+<td>5G</td>
+<td>10G</td>
+<td>50G</td>
+<td>不限</td>
+</tr>
+<tr>
+<td>CDN 流量</td>
+<td>4G</td>
+<td>25G</td>
+<td>50G</td>
+<td>150G</td>
+<td>1000G</td>
+<td>不限</td>
+</tr>
+<tr>
+<td>推荐 DAU（仅参考）</td>
+<td>适用于 DAU50 以下应用</td>
+<td>适用于 DAU100 以下应用</td>
+<td>适用于 DAU500 以下应用</td>
+<td>适用于 DAU1000 以下应用</td>
+<td>适用于 DAU5000 以下应用</td>
+<td>不限</td>
+</tr>
+<tr>
+<td>价格</td>
+<td>团队版免费赠送</td>
+<td>30 元/月</td>
+<td>104 元/月</td>
+<td>390 元/月</td>
+<td>2499 元/月</td>
+<td><a href="https://cloud.tencent.com/apply/p/xtuect0n2wm">联系购买</a></td>
+</tr>
+</tbody></table>
 
 <dx-alert infotype="explain" title="">
 <ul style = "margin-bottom: 0px;">
