--- a/product/区块链/至信链开放联盟链/购买指南.md
+++ b/product/区块链/至信链开放联盟链/购买指南.md
@@ -25,12 +25,18 @@
 1. 登录至信链控制台，选择左侧导航中的**服务市场**。
 2. 在服务市场中，选择**元商品协议**卡片右下角的**接入服务**。
 3. 填写接入申请表单，等待后台审核。
-4. 审核通过后，单击**立即购买**进入套餐选购页面。
+4. 审核通过后，单击**立即购买**进入套餐选购页面。如下图所示：
+![](https://qcloudimg.tencent-cloud.cn/raw/4e9d6f3476a631c18c2c218af86d107c.png)
 5. 选中相应套餐包后，单击**立即购买**，完成支付后即可使用资源包。
 
 ### 至信链可信存证
+#### 方式 1：
 1. 登录至信链产品控制台，或是直接打开至信链可信存证产品购买页。
-2. 选中相应套餐包后，单击立即购买，完成支付后即可使用资源包。
+2. 选中相应套餐包后，单击**立即购买**，完成支付后即可使用资源包。
+
+#### 方式 2：
+1. 登录至信链可信存证产品购买页。
+2. 选中相应套餐包后，单击**立即购买**，完成支付后即可使用资源包。
 
 ## 欠费说明
 
