--- a/product/计算与网络/CKafka/Datahub 最佳实践/数据简单清洗.md
+++ b/product/计算与网络/CKafka/Datahub 最佳实践/数据简单清洗.md
@@ -11,7 +11,7 @@
 
 - 插件丰富：数据处理支持丰富的处理预制插件，利于快速生成所需的消费格式。
 - 链式处理：数据处理支持消息链式处理，即上一次的处理结果能够作为本次处理的输入参数，利于处理复杂结构。
-- 可视预览：数据处理支持实时 Json 结构化预览，利于迅速定位排查问题。
+- 可视预览：数据处理支持实时 JSON 结构化预览，利于迅速定位排查问题。
 - 类型转换：数据处理支持不同数据类型间的转换，利于校验数据格式。
 
 ## 运行原理
@@ -128,8 +128,7 @@ TKE 采集格式通常如下所示，TKE 采集器会将 metadata 数据放入 J
 </dx-codeblock>
 
 
-当日志采集后投递进 ElasticSearch 时，由于支持嵌套 JSON 结构，因此不需要对数据做出太大改动。但当需要投递到数据库时，此时就需要将数据转换成能够识别的单层 JSON
-格式，因此按照下文顺序设计解析流程：
+当日志采集后投递进 ElasticSearch 时，由于支持嵌套 JSON 结构，因此不需要对数据做出太大改动。但当需要投递到数据库时，此时就需要将数据转换成能够识别的单层 JSON 格式，因此按照下文顺序设计解析流程：
 
 1. 使用 **JSONPATH** 语句处理第一层嵌套的 JSON 结构 `$.kubernetes`，解析模式选择 `JSON`。首先将嵌套 JSON 结构转换为单层 JSON 结构。测试后结果如下所示：
 <dx-codeblock>
