--- a/product/监控与管理/应用性能观测/操作指南/资源管理/新建业务系统.md
+++ b/product/监控与管理/应用性能观测/操作指南/资源管理/新建业务系统.md
@@ -2,7 +2,7 @@
 
 ## 操作步骤
 1. 进入应用性能观测控制台 [**资源管理**](https://console.cloud.tencent.com/apm/monitor/team)
-2. 单击 **新建** ，进入创建业务系统弹框。
+2. 单击**新建** ，进入创建业务系统弹框。
 3. 根据下表配置系统信息。
 
 | 配置项  | 说明      |
@@ -15,4 +15,4 @@
    | 业务系统简介 | 可以简单描述业务系统用途等。                                 |
    | 标签         | 应用性能监控结合腾讯云资源标签功能，为您提供按标签授予子账号权限和按标签分账功能。可参考 [访问管理](https://cloud.tencent.com/document/product/1463/58162)设置标签。 |
 
-4. 完成后，单击保存即可。
+4. 完成后，单击**保存**即可。
