--- a/product/安全服务/云访问安全代理/购买指南/计费概述.md
+++ b/product/安全服务/云访问安全代理/购买指南/计费概述.md
@@ -9,17 +9,17 @@
 <table>
 <thead>
 <tr>
-<th>产品功能</th>
-<th>计费项名称</th>
-<th>支持配置数据库个数</th>
-<th>价格（元/月）</th>
+<th width="10%">产品功能</th>
+<th width="25%">计费项名称</th>
+<th width="20%">支持配置数据库个数</th>
+<th width="20%">价格（元/月）</th>
 </tr>
 </thead>
 <tbody><tr>
 <td rowspan=2>数据加密</td>
 <td>标准版</td>
 <td>支持配置3个数据库实例</td>
-<td>3000</td>
+<td>3,000</td>
 </tr>
 <tr>
  <td>数据库实例扩展包</td>
@@ -30,7 +30,7 @@
 <td rowspan=2>数据脱敏</td>
 <td>标准版</td>
 <td>支持配置3个数据库实例</td>
-<td>3000</td>
+<td>3,000</td>
 </tr>
 <tr>
  <td>脱敏实例扩展包</td>
@@ -41,39 +41,34 @@
 <td rowspan=5>数据库审计</td>
 <td>标准版</td>
 <td>支持配置3个数据库实例</td>
-<td>3800</td>
+<td>3,800</td>
 </tr>
 <tr>
  <td>高级版</td>
 <td>支持配置6个数据库实例</td>
-<td>6800</td>
+<td>6,800</td>
 </tr>
 <tr>
  <td>企业版</td>
 <td>支持配置12个数据库实例</td>
-<td>11800</td>
+<td>11,800</td>
 </tr>
 <tr>
  <td>旗舰版</td>
 <td>支持配置25个数据库实例</td>
-<td>22700</td>
+<td>22,700</td>
 </tr>
 <tr>
  <td>存储扩容</td>
 <td>扩展1TB 存储空间</td>
-<td>1000</td>
+<td>1,000</td>
 </tr>
 <tr>
 <td>敏感数据识别</td>
-<td>当前公测阶段，已购买加密服务的用户可在 <a href="https://console.cloud.tencent.com/casb">云访问代理控制台</a> 的相应页面申请免费试用，具体计费情况于2022年上线。</td>
-<td>-</td>
-<td>-</td>
+<td colspan=3 and rowspan=2>当前公测阶段，已购买加密服务的用户可在 <a href="https://console.cloud.tencent.com/casb">云访问代理控制台</a> 的相应页面申请免费试用，具体计费情况于2022年上线。</td>
 </tr>
 <tr>
 <td>访问控制</td>
-<td>当前公测阶段，已购买加密服务的用户可在 <a href="https://console.cloud.tencent.com/casb">云访问代理控制台</a> 的相应页面申请免费试用，具体计费情况于2022年上线。</td>
-<td>-</td>
-<td>-</td>
 </tr>
 </tbody></table>
 
