--- a/product/安全服务/数据安全审计/产品介绍/产品优势.md
+++ b/product/安全服务/数据安全审计/产品介绍/产品优势.md
@@ -6,6 +6,5 @@
 数据安全审计具有高性能网络引擎和 SQL 语句分析引擎，基于 SaaS 化的弹性扩容架构，秒级吞吐量可达数十万条 SQL，每小时入库速率可达亿级别，在高并发环境下表现优异。与此同时，数十亿条在线 SQL 语句存储能力，可帮助企业在海量数据中进行检索与分析，有效还原数据库安全信息。
 
 ## 重点突出的审计报表
-数据安全审计能够满足等级保护在数据安全和信息审计方面的要求。在满足这些审计合规性的同时，能够定期输出审计报表，审计报表从综合分析、等保参考等方面，提供多角度的统计数据，为企业整体上了解数据安全状况提供参考。
-
+数据安全审计能够满足等级保护在数据安全和信息审计方面的要求。在满足这些审计合规性的同时，能够定期输出审计报表，审计报表从综合分析、等保参考等方面，提供多角度的统计数据，为企业整体了解数据安全状况提供参考。
 
