--- a/product/监控与管理/访问控制/用户指南/概览.md
+++ b/product/监控与管理/访问控制/用户指南/概览.md
@@ -1,4 +1,4 @@
-[访问管理控制台](https://console.cloud.tencent.com/cam/overview) 的概览页包括六大模块：**访问管理资源**、**登录链接**、**敏感操作**、**高权限策略**、**上次登录信息**、**安全分析报告**、**安全指引**。
+访问管理控制台的 [概览页](https://console.cloud.tencent.com/cam/overview) 包括七大模块：**访问管理资源**、**登录链接**、**敏感操作**、**高权限策略**、**上次登录信息**、**安全分析报告**、**安全指引**。
 
 ![](https://qcloudimg.tencent-cloud.cn/raw/349e022a835ba67a5abdb58796a940a0.png)
 
