--- a/product/数据库/云数据库SQL Server/产品简介/常用概念.md
+++ b/product/数据库/云数据库SQL Server/产品简介/常用概念.md
@@ -12,7 +12,7 @@
 - **腾讯云控制台**
 基于 Web 的用户界面。
 - **地域**
-地域是指物理的数据中心。一般情况下，SQL Server 实例应该和云服务器实例位于同一地域，以实现最高的访问性能。
+地域是指物理的数据中心的地理区域。一般情况下，SQL Server 实例应该和云服务器实例位于同一地域，以实现最高的访问性能。
 - **可用区**
 可用区是指在某个地域内拥有独立电力和网络的物理区域。同一地域的不同可用区之间没有实质性区别。
 - **多可用区**
@@ -66,7 +66,7 @@ port，指计算机内部或交换机路由器内的端口。
 - **字符集**
 包括字符编码集和字符编码，简单理解就是一个映射关系，一个编码规则。将字符集对应的码点映射为一个个二进制序列，从而使得计算机可以存储和处理。
 - **云服务器**
-（Cloud Virtual Machine，CVM）是腾讯云提供的可扩展的计算服务。
+Cloud Virtual Machine（CVM）是腾讯云提供的可扩展的计算服务。
 - **SSMS**
 SQL Server Management Studio (SSMS) 是一种集成环境，用于管理任何 SQL 基础结构。
 - **告警策略**
