--- a/product/安全服务/数据安全审计/产品介绍/适用行业.md
+++ b/product/安全服务/数据安全审计/产品介绍/适用行业.md
@@ -5,7 +5,7 @@
 通过配置审计规则，及时发现数据安全隐患，企业可第一时间采取对应措施，避免或降低企业损失。
 
 ## 医疗防统方
-卫计委明确要求各大医院开展防统方工作，杜绝医疗回扣。数据安全审计行为分析功能帮助医院定位统方操作，让统方人员有所忌惮，同时满足医院响应卫计委管理制度的需求。
+相关规定明确要求各大医院开展防统方工作，防范医药购销领域统方商业贿赂的发生，数据安全审计行为分析功能可以帮助医院定位统方操作，及时发现和处置异常情况。
 
 ## 数据安全事件溯源
 当企业发生内外部安全事件后，能够通过数据安全审计提供的详细日志，找到攻击方或内部责任人的操作痕迹，为进一步采取相关措施提供依据。
