--- a/product/数据库/云存储Redis/操作指南/全球复制/新建全球复制组.md
+++ b/product/数据库/云存储Redis/操作指南/全球复制/新建全球复制组.md
@@ -10,7 +10,8 @@
 - **主备切换：**每个实例内部主节点和副本节点之间拥有自动主备故障切换能力，但是不会在主实例和只读实例之间进行自动故障切换。
 
 ## 版本说明
-全球复制仅支持4.0标准架构、4.0集群架构、5.0标准架构、5.0集群架构实例。
+- 全球复制仅支持4.0标准架构、4.0集群架构、5.0标准架构、5.0集群架构实例。
+- 全球复制当前版本支持单可用区部署的实例，也支持多可用区部署的实例。
 
 ## 计费说明
 - 复制组内的实例未跨地域，将不会产生新的费用。
@@ -18,8 +19,8 @@
 
 ## 新建全球复制组
 ### 前提条件
-- 已 [创建云数据库 Redis 实例](https://cloud.tencent.com/document/product/239/30871)，且实例状态为**运行中**。
-- 复制组的云数据库 Redis 主实例数据已清空。 
+- 已 [创建云数据库 Redis 实例](https://cloud.tencent.com/document/product/239/30871)。
+- 实例状态为**运行中**。 
 
 ### 操作步骤
 1. 登录 [Redis 控制台](https://console.cloud.tencent.com/redis)。
@@ -46,7 +47,7 @@
 <td>广州</td></tr>
 <tr>
 <td>主实例选择</td> 
-<td>选择复制组中的主实例，主实例必须为空实例。选择主实例之后，将提示实例的版本架构与内存容量，请您确认规格是否满足需求。</td>
+<td>选择复制组中的主实例。选择主实例之后，将提示实例的版本架构与内存容量，请您确认规格是否满足需求。</td>
 <td>是</td>
 <td>test-XXX</td></tr>
 </tbody></table>
@@ -60,7 +61,6 @@
 创建复制组之后，您可以根据实际需求向复制组添加同地域或者跨地域的实例，并分配实例角色为复制组的主实例或者只读实例，实现数据同步。
 
 ### 注意事项
-- 一个复制组，最大支持添加**4**个实例，且实例数据必须为空，否则添加失败。
 - 新添加的实例将从组内的主实例节点同步数据，在全量数据同步完成之前新加入的实例不可操作和访问。
 - 实例加入复制组，将对实例进行内核版本升级，在升级结束时会有一段时间内的一次或者多次连接闪断。
 
