--- a/product/管理与支持/计费相关(new)/常见问题/提现常见问题.md
+++ b/product/管理与支持/计费相关(new)/常见问题/提现常见问题.md
@@ -35,11 +35,20 @@
   
 
 ### 为何提现失败？
-原路提现失败常见原因有：微信对应的银行卡已解绑、微信账号被冻结、微信对应的银行卡已注销或冻结。
-- 若因微信对应的银行卡解绑，建议重新绑定银行卡再申请提现。
-- 若因微信被冻结导致提现失败，请先申请原路提现，再微信操作资金取出/转移。（微信团队针对微信支付能力被限制冻结场景有一套完整，详细的资金取出/转移流程，建议您在操作原路提现后直接联系腾讯微信官网客服申请资金去除/转移。）
 
-线下提现失败常见原因有：银行卡号不存在、银行卡已注销或冻结，提现时填写的信息与实名认证信息不符。
+**原路提现失败**常见原因有：微信对应的银行卡已解绑、微信账号被冻结、微信对应的银行卡已注销或冻结。
+- **申请原路提现时，微信账号提示“微信账号限制登录”。**
+ - 若通过微信绑定银行卡充值，需要先在腾讯云账户申请原路提现，然后准备一张自己名下的银行卡联系微信官方人员咨询资金退回的相关流程。
+ - 若通过微信零钱通方式充值，需要先在腾讯云申请原路提现，然后临时登录微信，依照微信安全提示操作**封号后提取资产或还款**流程提取资金。
+**参考流程如下**：
+![](https://qcloudimg.tencent-cloud.cn/raw/b8b1c496e5388081b0a58702eac3d0a4.png)
+- **申请原路提现时，微信账号被注销。**
+请您务必收集齐全相关资料 [提交工单](https://console.cloud.tencent.com/workorder/category) 咨询，我们综合评估后会让您走邮件申请退回资金。
+- **申请原路提现充值的银行卡已解绑/注销。**
+ - 原路提现利用原充值订单的退款接口实现，原路提现发起后，资金会原路退回到对应充值订单的付款账号。为了提现成功建议您重新绑定当初充值的银行卡申请资金退回。
+ - 若银行卡已注销，请您务必收集齐全相关资料。如注销证明所需的相关材料、银行卡注销证明、客户登录控制台的截图证明、客户汇款凭证或在线充值凭证，走邮件申请。
+
+**线下提现失败**常见原因有：银行卡号不存在、银行卡已注销或冻结，提现时填写的信息与实名认证信息不符。
 若因微信对应的银行卡已注销或冻结，银行卡号不存在、银行卡已注销或冻结，等无法提现，请务必收集齐全相关资料证明（如 ：银行卡注销证明，客户登录控制台的截图证明、客户汇款凭证或在线充值凭证，实名认证账户的银行信息）并使用腾讯云绑定的邮箱发送邮件至cloud_feiyong@tencent.com 申请云费用提现（收款户名需要与腾讯云账号实名认证信息保持一致）。
 邮件内容如下：
 - 【用户账号 ID [账号信息介绍](https://cloud.tencent.com/document/product/378/11245)】：（注：请填写注册账号 ID）
