--- a/product/数据库/数据传输服务DTS/动态与公告/产品动态.md
+++ b/product/数据库/数据传输服务DTS/动态与公告/产品动态.md
@@ -4,6 +4,13 @@
 <tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=10%>发布时间</th><th width=20%>相关文档</th></tr>
 <tbody>
 <tr>
+<td>M3体验优化</td>
+<td><li>数据一致性校验结果展示优化。</li>
+    <li>数据同步支持 DML 过滤支持的链接增加，新增 MariaDB/Percona/TDSQL-C MySQL 同步链路。</li>
+    <li>Where 条件过滤支持的链路增加，新增MariaDB/Percona/TDSQL-C MySQL 同步链路。</li><li>TDSQL-C MySQL 之间的同步任务，支持 DML 非必选。</li>
+</td>
+<td>2022-04</td>
+<td>-</td></tr><tr>
 <td>支持跳过校验项内容</td>
 <td> MySQL 到 MySQL 的数据迁移、数据同步任务中支持对校验项进行跳过。</td>
 <td>2022-04</td>
@@ -25,8 +32,8 @@
 <td>2022-03</td>
 <td><a href="https://cloud.tencent.com/document/product/571/71755" target="_blank">迁移至 TDSQL MySQL（TDStore）</a></td></tr>
 <tr>
-<td>MariaDB、TDSQL MySQL 相关的数据迁移支持一致性校验</td>
-<td>支持在 MariaDB、TDSQL MySQL 作为源库或者目标库的数据迁移中创建一致性校验任务。</td>
+<td>MariaDB/Percona/TDSQL MySQL 相关的数据迁移支持一致性校验</td>
+<td>支持在 MariaDB/Percona/TDSQL MySQL 作为源库或者目标库的数据迁移中创建一致性校验任务。</td>
 <td>2022-03</td>
 <td><a href="https://cloud.tencent.com/document/product/571/62564" target="_blank">创建数据一致性校验</a></td></tr>
 <tr>
