--- a/product/管理与支持/计费相关(new)/计费说明/云服务退货说明.md
+++ b/product/管理与支持/计费相关(new)/计费说明/云服务退货说明.md
@@ -171,7 +171,7 @@
 以活动折扣购买的产品，如若活动规则中若说明不支持退款，则无法申请退款。如若支持退款，以当前系统能享受的单价和折扣计算为准。
 
 #### 按带宽计费切换为按流量计费申请退费有什么注意事项？
-- 包年包月带宽切换为按流量网络计费模式退还为现金购买，按原路退回；赠送金购买，则按赠送金退还。
-例如：该订单使用100元（包含：50元现金，50元赠送金）消耗30元，该消耗优先采用赠送金进行抵扣，清算完成后退还剩余金额（包含：50元现金，20元赠送金）。
+- 包年包月带宽切换为按流量网络计费模式购买时为现金和赠送金，切换按量计费模式退还时现金和赠送金按支付比例退还到支付方腾讯云账户。
+例如：该订单使用100元（包含：50元现金，50元赠送金）消耗30元，该消耗按支付比例计算退还，清算完成后退还剩余金额（包含：35元现金，35元赠送金）。
 - 切换为按流量计费模式后，重新切换为按带宽计费，由于没有折扣，需支付原价切换。切换前请慎重考虑，一旦切换成功，不支持撤销操作。
 
