--- a/product/数据库/数据传输服务DTS/动态与公告/产品动态.md
+++ b/product/数据库/数据传输服务DTS/动态与公告/产品动态.md
@@ -4,10 +4,10 @@
 <tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=10%>发布时间</th><th width=20%>相关文档</th></tr>
 <tbody>
 <tr>
-<td>M3体验优化</td>
+<td>体验优化</td>
 <td><li>数据一致性校验结果展示优化。</li>
-    <li>数据同步支持 DML 过滤支持的链接增加，新增 MariaDB/Percona/TDSQL-C MySQL 同步链路。</li>
-    <li>Where 条件过滤支持的链路增加，新增MariaDB/Percona/TDSQL-C MySQL 同步链路。</li><li>TDSQL-C MySQL 之间的同步任务，支持 DML 非必选。</li>
+<li>数据同步支持 DML 过滤支持的链接增加，新增 MariaDB/Percona/TDSQL-C MySQL 同步链路。</li>
+<li>Where 条件过滤支持的链路增加，新增 MariaDB/Percona/TDSQL-C MySQL 同步链路。</li><li>TDSQL-C MySQL 之间的同步任务，支持 DML 非必选。</li>
 </td>
 <td>2022-04</td>
 <td>-</td></tr><tr>
