--- a/product/监控与管理/访问控制/用户指南/身份管理/用户管理/子用户信息查询.md
+++ b/product/监控与管理/访问控制/用户指南/身份管理/用户管理/子用户信息查询.md
@@ -5,7 +5,7 @@
 已登录访问管理控制台，进入 [用户列表](https://console.cloud.tencent.com/cam) 管理页面。
 
 ## 操作步骤
-### 步骤1：找到子用户
+### 使用搜索框找到子用户
 当子用户数量较多时，您可以通过用户名、账号 ID、SecretId、手机、邮箱、备注等关键词搜索子用户。
 1. 在用户列表管理页面，找到右上角的搜索框。
 2. 在搜索框中输入关键字，单击右侧搜索图标，可以搜索到相关子用户，完成通过搜索框找到子用户操作。
@@ -13,7 +13,7 @@
 
 
 
-### 步骤2：查看子用户信息
+### 查看子用户信息
 <dx-tabs>
 ::: 使用抽屉查看子用户信息
 您可以在此查看子用户的用户组、消息订阅、登录保护、操作保护、MFA 设备状态、控制台访问状态等信息。
