--- a/product/数据库/云数据库SQL Server/购买指南/产品价格.md
+++ b/product/数据库/云数据库SQL Server/购买指南/产品价格.md
@@ -92,7 +92,7 @@
 ### 按量计费价 - 基础版
 <table>
 <tr><th rowspan = "2"  width="16%">规格</th>
-<th colspan = "3" style="text-align:center" width="84%">价格（GB/元/小时）</th></tr>
+<th colspan = "3" style="text-align:center" width="84%">价格（元/小时）</th></tr>
 <tr>
 <th width="28%">北京、上海、广州、重庆、成都、南京</th>
 <th width="28%">中国香港</th>
