--- a/product/数据库/云存储Redis/操作指南/升级实例/升级实例架构.md
+++ b/product/数据库/云存储Redis/操作指南/升级实例/升级实例架构.md
@@ -23,7 +23,7 @@
 - 升级流程通常在3分钟内可以完成。
 - 升级过程中，存量连接会断开（闪断），业务需要有重连机制。
 
-## 升级操作
+## 操作步骤
 1. 登录 [Redis 控制台](https://console.cloud.tencent.com/redis)。
 2. 在右侧实例列表页面上方，选择地域。
 3. 在实例列表中，找到需升级版本的实例。
