--- a/product/数据库/云存储Redis/操作指南/升级实例/升级实例版本.md
+++ b/product/数据库/云存储Redis/操作指南/升级实例/升级实例版本.md
@@ -23,7 +23,7 @@
 - 数据同步过程中，对服务无影响。
 - 数据切换过程中，实例将存在1分钟以内的只读状态（等待数据同步完成），以及连接闪断（秒级）的影响，需要业务具备自动重连的机制。
 
-## 前提条件
+## 升级准备
 
 - 待升级版本的实例处于正常状态下（运行中），并且当前没有任何任务执行。
 - 已确认升级的目标版本。
