--- a/product/数据库/云数据库SQL Server/产品简介/常用概念.md
+++ b/product/数据库/云数据库SQL Server/产品简介/常用概念.md
@@ -88,7 +88,7 @@ SQL Server Management Studio (SSMS) 是一种集成环境，用于管理任何 S
 - **备份策略**
 可选择备份为实例备份或者多库备份的方式，实例备份即可以对整个实例的所有数据库进行备份，多库备份即可以选择需要进行备份的数据库。
 - **配置备份任务**
-用于设置手动备份和定时备份的全局变量，支持对备份文件形式（单库备份或者打包备份），主或从实例进行备份进行选择和设置。
+用于设置手动备份和定时备份的全局变量，支持对备份文件形式（单库备份或者打包备份）、主或从实例进行备份进行选择和设置。
 - **备份文件形式**
 用于设置实例的备份文件是打包备份文件还是单库备份文件。
 
