--- a/product/管理与支持/计费相关(new)/购买流程/充值/在线充值.md
+++ b/product/管理与支持/计费相关(new)/购买流程/充值/在线充值.md
@@ -30,12 +30,17 @@
 ## 限频说明
 
 针对短时间内多个支付账号向同一个 UIN 进行在线充值时，可能会出现系统限频拦截。拦截后页面提示如下：
-- 微信支付
-![](https://qcloudimg.tencent-cloud.cn/raw/4d780d03670c19f5b842b5c933a3ef7d.png)
-- QQ 钱包支付
-![](https://qcloudimg.tencent-cloud.cn/raw/486b068ecdf13d6d85e0e3702f2891c8.png)
-- 网银支付
-![](https://qcloudimg.tencent-cloud.cn/raw/3ffcee36caca93310533840544b64919.png)
+<dx-tabs>
+::: 微信支付拦截
+![](https://main.qcloudimg.com/raw/2429728736857d13354d4ee349b0a1b8.png)
+:::
+::: QQ钱包支付拦截
+![](https://main.qcloudimg.com/raw/dfe872c37b0487941194b661f1c2c753.png)
+:::
+::: 网银支付拦截
+![](https://main.qcloudimg.com/raw/0b3d3eeebd2d9eb00083983cdad65e10.png)
+:::
+</dx-tabs>
 
 若您遇到此类问题，建议 [提交工单](https://cloud.tencent.com/online-service?from=doc_555) 咨询。
 
