--- a/product/安全服务/主机安全/操作指南/漏洞管理/漏洞检测.md
+++ b/product/安全服务/主机安全/操作指南/漏洞管理/漏洞检测.md
@@ -21,6 +21,6 @@
 	![](https://qcloudimg.tencent-cloud.cn/raw/5dcf6d6767bd902eeb96522218d5a22f.png)
 		[](id:hltdgl)
       - **忽略漏洞**
- 在漏洞设置弹弹窗中的“忽略漏洞”标签内，查看已忽略的漏洞列表，并可进行取消忽略操作。
+ 在漏洞设置弹窗中的“忽略漏洞”标签内，查看已忽略的漏洞列表，并可进行取消忽略操作。
 ![](https://qcloudimg.tencent-cloud.cn/raw/79ed4fa46e83b8e23810a03deb7e2ad8.png)
 			
