--- a/product/存储与CDN/日志服务/其他问题.md
+++ b/product/存储与CDN/日志服务/其他问题.md
@@ -86,3 +86,25 @@ vi /usr/local/loglistener-2.3.0/etc/loglistener.conf
 ```
  6. 登录 [日志服务控制台](https://console.cloud.tencent.com/cls/overview?region=ap-guangzhou)，在左侧导航栏中，单击**机器组管理**，修改该服务器绑定的机器组配置，使用新 IP 替换原机器 IP 地址，单机**确定**。
 
+### 如何排查测试告警通知渠道报错或未收到测试消息？
+
+**情况1：页面显示“发送失败”**
+
+鼠标在“发送失败”上悬停可查看错误码及详细的失败原因，常见的错误码如下：
+
+| 错误码 | 含义                                                         | 排查方式                                                     |
+| ------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| -1004  | 该通知渠道消息发送失败                                       | 一般是由于接受对象中的用户或用户组未配置或验证手机、邮箱或微信导致，可在 [用户列表](https://console.cloud.tencent.com/cam) 中查看并配置。 |
+| -1005  | 该通知渠道部分消息发送失败，例如部分用户未成功发送，或部分渠道未成功发送 | 一般是由于接受对象中的部分用户或用户组未配置或验证手机、邮箱或微信导致，可在 [用户列表](https://console.cloud.tencent.com/cam) 中查看并配置。 |
+| -1006  | 企业微信或自定义接口回调报错                                 | 根据详细的失败原因进一步排查，常见的错误包括：<ul  style="margin: 0;"><li>invalid URI for request：不是一个合法的 URL 地址。</li><li>i/o timeout：接口访问超时，请检查接口地址及能否通过公网直接访问。</li><li>callback custom error with status:xxx：接口响应报错，请检查接口地址及后端服务是否正常。</li><li>ssrf attack：回调接口地址需为公网可直接访问的地址，接口地址为腾讯云内网时可能出现该错误。</li></ul> |
+
+**情况2：页面显示“已发送”，但实际未收到测试消息**
+
+根据接收渠道，常见原因如下：
+
+| 接收渠道                               | 原因                                                         |
+| -------------------------------------- | ------------------------------------------------------------ |
+| 邮件、短信、微信、电话                 | 为避免重复通知干扰用户，一天内仅允许向同一用户使用同一渠道发送一次测试消息。 |
+| 自定义接口回调（钉钉及飞书机器人地址） | 测试消息不符合钉钉及飞书 API 接口要求，消息被忽略，此时测试通知渠道功能无实际意义，您可直接在告警策略中按钉钉及飞书 API 要求配置合适的请求头和请求内容来发送告警，详情可参考 [使用钉钉或飞书接收告警通知](https://cloud.tencent.com/document/product/614/66236)。 |
+| 自定义接口回调（其它地址）             | CLS 以 HTTP 响应状态码来判断消息发送是否成功，请检查自定义接口是否存在 HTTP 响应状态码正常，但仍存在其他业务逻辑限制的情况。 |
+
