--- a/product/移动与通信/即时通信/9服务端 API/第三方回调API/群组系统相关回调/撤回群消息之后回调.md
+++ b/product/移动与通信/即时通信/9服务端 API/第三方回调API/群组系统相关回调/撤回群消息之后回调.md
@@ -39,7 +39,7 @@ https://www.example.com?SdkAppid=$SDKAppID&CallbackCommand=$CallbackCommand&cont
 | CallbackCommand | 固定为：Group.CallbackAfterRecallMsg |
 | contenttype | 固定值为 JSON |
 | ClientIP | 客户端 IP，格式如：127.0.0.1 |
-| OptPlatform | 客户端平台，取值参见 [第三方回调简介 > 回调协议](https://cloud.tencent.com/document/product/269/1522#.E5.9B.9E.E8.B0.83.E5.8D.8F.E8.AE.AE) 中 OptPlatform 的参数含义 |
+| OptPlatform | 客户端平台，取值参见 [第三方回调简介：回调协议](https://cloud.tencent.com/document/product/269/1522#.E5.9B.9E.E8.B0.83.E5.8D.8F.E8.AE.AE) 中 OptPlatform 的参数含义 |
 
 ### 请求包示例
 
