--- a/product/移动与通信/云开发低代码平台/操作指南/数据源与数据管理/自定义连接器/新建自定义连接器.md
+++ b/product/移动与通信/云开发低代码平台/操作指南/数据源与数据管理/自定义连接器/新建自定义连接器.md
@@ -95,9 +95,10 @@ module.exports = async function (params, context) {
 };
 :::
 </dx-codeblock>
+<dx-alert infotype="notice" title="">
+只能调用与微搭相同云开发环境中的云函数。
+</dx-alert>
 
-
->! 只能调用与微搭相同云开发环境中的云函数。
 
 #### 云开发数据库
 
@@ -115,10 +116,14 @@ module.exports = async function (params, context) {
 :::
 </dx-codeblock>
 
+<dx-alert infotype="notice" title="">
+只能调用与微搭相同云开发环境中的数据库。其他更多能力请参见 [自定义代码](https://cloud.tencent.com/document/product/1301/68440)。
+</dx-alert>
 
->! 只能调用与微搭相同云开发环境中的数据库。
 
-其他更多能力请参见 [自定义代码](https://cloud.tencent.com/document/product/1301/68440)。
+
+
+
 
 ### 步骤4：启用方法
 最后请勾选方法以启用已经实现的方法。
