--- a/product/安全服务/游戏应用安全/产品简介/产品功能/游戏安全/基础反外挂.md
+++ b/product/安全服务/游戏应用安全/产品简介/产品功能/游戏安全/基础反外挂.md
@@ -38,16 +38,16 @@
 提供运营数据中心，为游戏统计作弊检测与打击的数据量与数据趋势，方便用户把控游戏安全态势。
 
 ## 端游反外挂
-拥有十余年的实战经验打造行业领先的反外挂方案，提供内存保护、反系统加速、反模拟按键、外挂特征扫描、篡改监测、定制外挂特征检测、定制外挂云上报、作弊名单推送、作弊证据支持、处罚投诉核查等服务，助力游戏侧强力反外挂。
+十余年的实战经验打造行业领先的反外挂方案，提供内存保护、反系统加速、反模拟按键、外挂特征扫描、篡改监测、定制外挂特征检测、定制外挂云上报、作弊名单推送、作弊证据支持、处罚投诉核查等服务，助力游戏侧强力反外挂。
 
 ### 内存保护
 基于系统底层支持的多重内存保护方案，直接拦截跨进程外挂对游戏的访问，可对核心内存进行加密和隐藏，并且监控外挂的访问行为。
 
 ### 反系统加速
-游戏运行时，将检测各种调整系统时间的工具。在确认有恶意工具使用时，弹框终止游戏或上报到后台。
+游戏运行时，检测各种调整系统时间的工具，确认有恶意工具使用时弹框终止游戏或上报到后台。
 
 ### 反模拟按键
-游戏运行时，将检测各种模拟按键工具。在确认有恶意工具使用时，终止游戏或上报到后台。
+游戏运行时，检测各种模拟按键工具，确认有恶意工具使用时，终止游戏或上报到后台。
 
 ### 特征扫描
 基于外挂特征快速匹配，接入简单、运营灵活，打击精准。共享腾讯游戏端游海量通用作弊工具特征库，并跟随腾讯游戏通用特征库更新和升级。
@@ -56,7 +56,7 @@
 通过提取通用外挂工具的特性，并扫描客户端环境进行检测。
 
 ### 篡改监测
-当发生如下动作是，该动作将会被检测：
+当发生如下动作时，该动作将会被检测：
 - 外挂对模块运行时的代码段以及只读段进行修改。
 - 外挂对模块运行时所保护的代码段以及只读段进行修改。
 
@@ -73,7 +73,7 @@
 反外挂控制台支持推送作弊名单，游戏厂商可以通过平台获取游戏的作弊人数和比例，作弊查询以及导出作弊名单。
 
 ### 作弊证据支持
-通过官网提供作弊用户使用的外挂信息。
+通过官网提供作弊用户使用的外挂信息
 
 ### 处罚投诉核查
 当用户投诉误判且处罚来源于反外挂方案时，团队将提供处罚原因核查服务。
