--- a/product/企业应用/千帆鹊桥 iPaaS/使用指南/集成工具/运行监控.md
+++ b/product/企业应用/千帆鹊桥 iPaaS/使用指南/集成工具/运行监控.md
@@ -5,6 +5,11 @@
 ### 监控
 支持查看实时和历史监控数据，可以通过监控数据分析对应流的运行情况。默认展示当天深度集成的监控概览，若需要查看历史数据，可自定义时间维度后选择对应应用或流点击搜索进行查看。默认展示最近应用的近一天的概览情况。
 
+>!目前控制台支持检索近一个月的监控。若有检索更早期日志的需求，请 [提交工单](https://console.cloud.tencent.com/workorder/category) 联系我们。
+
+
+
+
 #### 概览数据查询
 概览支持查看实时和历史监控数据，可以通过概览数据分析对应流的运行次数、运行成功次数以及运行平均耗时等。
 1. 登录 [千帆鹊桥 iPaaS 控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏单击**集成工具** > **运行监控**。
@@ -27,8 +32,11 @@
 
 
 ### 运行日志
+
 #### 步骤1：查询运行日志
 运行日志支持查看历史日志和实时日志，可以通过日志信息回溯一次作业的运行情况和消息数据。
+>!目前控制台支持检索近一个月的运行日志。若有检索更早期日志的需求，请 [提交工单](https://console.cloud.tencent.com/workorder/category) 联系我们。
+>
 1. 登录 [千帆鹊桥 iPaaS 控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏单击**集成工具** > **运行监控**。
 2. 在**运行监控** > **运行日志**页面，默认展示最近应用的近30分钟的运行日志，日志按就近原则进行排序，日志列表包括：
 	- 时间：产生日志的时间。
@@ -72,14 +80,21 @@
 ![](https://qcloudimg.tencent-cloud.cn/raw/4edfb01213b3ee6d18d3ea6592e30524.png)
 
 
+
 ### 定时任务管理
+
 对于使用了 Scheduler 组件，根据制定规则定时触发集成流的应用，支持查看一周内流运行详情，包括深度集成的触发时间、结束时间、状态及对应操作的详细列表。  
+>!目前控制台支持检索近一个月的定时任务管理内容。若有检索更早期日志的需求，请 [提交工单](https://console.cloud.tencent.com/workorder/category) 联系我们。
+>
 1.  登录 [千帆鹊桥 iPaaS 控制台](https://console.cloud.tencent.com/ipaas)，在左侧导航栏单击**集成工具** > **运行监控**。
 2.  在**运行监控 > 定时任务管理**页面，选择具体集成流。默认展示当天任务运行详情。若要查看历史数据，可自定义时间维度后进行检索。
 ![](https://qcloudimg.tencent-cloud.cn/raw/67e0abada62f4c808bc888bdee6ad88a.png)
 
 
+
 ### 错误统计
+>!目前控制台支持检索近一个月的错误统计内容。若有检索更早期日志的需求，请 [提交工单](https://console.cloud.tencent.com/workorder/category) 联系我们。
+>
 #### 1. 查看错误统计列表
 支持对运行失败的应用的错误次数和错误类型等数据进行集中展示及快速处理。
 支持通过项目、应用、错误状态、环境/地域、集成流、错误类型、时间等维度来进行搜索。列表如下：
