--- a/product/安全服务/游戏应用安全/产品简介/产品功能/游戏安全/游戏加固.md
+++ b/product/安全服务/游戏应用安全/产品简介/产品功能/游戏安全/游戏加固.md
@@ -1,5 +1,5 @@
 ## Android 手游加固
-拥有行业领先的游戏专用加固方案，通过游戏代码保护、全面反调、资源保护、防动态脱壳等全面的功能矩阵，以性能稳定为前提，进行手游防破解，为手游安全保驾护航。
+行业领先的游戏专用加固方案，通过游戏代码保护、全面反调、资源保护、防动态脱壳等全面的功能矩阵，以性能稳定为前提，进行手游防破解，为手游安全保驾护航。
 
 ### SO 加密保护
 对 SO 文件进行代码、函数、导出表加密混淆，防止 HOOK 攻击，有效提高脱壳难度。
@@ -29,10 +29,10 @@
 对加固方案源码进行了混淆，极大的提高了外挂作者对加固方案的逆向分析门槛，进一步提高了游戏的破解难度。
 
 ### 导出表隐藏
-支持关键 so 的导出表隐藏，有效防止黑客通过获取导出表信息。
+支持关键 SO 的导出表隐藏，有效防止黑客通过获取导出表信息。
 
 ### 导入表乱序
-支持关键 so 的导入表乱序，提高 so 逆向门槛。
+支持关键 SO 的导入表乱序，提高 SO 逆向门槛。
 
 ### Unity AB 资源加密
 针对目前 Unity 游戏资源的主流打包方式 AssetBundle，提供对 AB 资源加密方案有效防止资源被窃取。
