--- a/product/计算与网络/云服务器/购买指南/退还包年包月实例退费说明.md
+++ b/product/计算与网络/云服务器/购买指南/退还包年包月实例退费说明.md
@@ -27,7 +27,7 @@
 
 以下场景暂不支持普通包年包月实例自助退还：
 - 标准网络增强型 SN2、计算网络增强型 CN2 实例暂不支持自助退还。
-- FPGA 计算型 FX2 实例暂不支持自助退还。
+- FPGA 计算型 FX2 实例暂不支持自助退还。ss
 - 广州 Open 地区实例暂不支持自助退还。
 - 某些活动资源不支持自助退还，具体以官网展示为准。
 
