--- a/product/域名与网站/网站备案/常见问题/注销备案.md
+++ b/product/域名与网站/网站备案/常见问题/注销备案.md
@@ -25,6 +25,10 @@
 - 该网站的工信部备案号仍然存在，请尽快联系正在使用的空间提供商，提交备案接入申请，以免影响您网站的正常使用。
 
 >?网站办理取消接入后，若长时间未接入其他服务商，其备案信息会有被管局注销的风险。 
+>
+
+### 注销网站过程中还可以访问网站吗？
+提交注销网站申请，等待管局审核通过后，网站便无法正常访问。若您仍需使用中国内地（大陆）服务器托管您的网站，请尽快重新提交备案申请。
 
 ### 同一云服务器实例备案的网站达到上限后，注销其中一个网站后，实例备案网站次数会回退吗？
 会回退，同一云服务器实例备案的网站不超过5个，如您达到上限后，注销其中一个网站，可重新使用该云服务器实例进行备案。
