--- a/product/域名与网站/网站备案/常见问题/注销备案.md
+++ b/product/域名与网站/网站备案/常见问题/注销备案.md
@@ -65,6 +65,9 @@
 >- 由于您不再使用该接入商的服务而自行取消。
 >- 由于当地管局查到该网站处于违规状态，责令接入商取消该域名接入。
 
+### 空壳主体可以新增网站吗？
+空壳主体无法新增网站，请至管局申请注销主体后再重新备案。
+
 ### 空壳主体如何注销？[](id:question4)
 空壳主体在腾讯云已无相关接入信息，因此无法通过腾讯云直接提交注销主体申请，需向备案所在地的通信管理局提交书面申请。
 相关操作请查看 [注销空壳主体](https://cloud.tencent.com/document/product/243/50971)。
