doc: getEffectList 接口Label参数

--- a/product/视频服务/美视优享/Web美颜特效/最佳实践/美颜特效小程序实践.md
+++ b/product/视频服务/美视优享/Web美颜特效/最佳实践/美颜特效小程序实践.md
@@ -154,11 +154,9 @@ Component({
 			const ar = new ArSdk(config);
 			// created回调里可以开始获取内置特效与滤镜列表
 			ar.on('created', () => {
-				// 获取内置特效，支持分页
+				// 获取内置美妆、贴纸列表
 				ar.getEffectList({
-					Type: 'Preset',
-					PageSize: 20,
-					PageNumber: 0,
+					Type: 'Preset'
 				}).then((res) => {
 					const list = res.map(item => ({
 						name: item.Name,
