--- a/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
+++ b/product/视频服务/美视优享/Web美颜特效/SDK接入/接入指南.md
@@ -376,8 +376,10 @@ sdk.setFilter(filterList[0].EffectId, 0.5)
 
 ```javascript
 // 获取内置特效
+// 默认返回内置美妆和贴纸素材，通过Label参数可以指定返回特定类型的素材
 const presetEffectList = await sdk.getEffectList({
 	Type: 'Preset'
+	// Label: ['贴纸'] 只返回内置贴纸
 })
 
 // 获取自制特效
@@ -539,7 +541,7 @@ effect:{
 	PageNumber: number,
 	PageSize: number,
 	Name: '',
-	Label: string,
+	Label: string|Array,
 	Type: 'Custom|Preset'
 }</pre>
 </td>
