--- a/product/计算与网络/容器服务/常见问题/集群相关/扩容缩容相关.md
+++ b/product/计算与网络/容器服务/常见问题/集群相关/扩容缩容相关.md
@@ -83,9 +83,9 @@ kubectl annotate node <nodename> cluster-autoscaler.kubernetes.io/scale-down-dis
 ```
 
 
-### 扩缩容事件如何反馈给用户？
+### 容器服务节点扩缩容事件如何查看？
 
-用户可在弹性伸缩控制台查询伸缩组的伸缩活动，也可查看 k8s 的事件。在以下三种资源上都会有对应的事件：
+您可在弹性伸缩控制台查询伸缩组的伸缩活动，也可查看 k8s 的事件。在以下三种资源上都会有对应的事件：
 - kube-system/cluster-autoscaler-status config map
     - **ScaledUpGroup** - CA 触发扩容。
     - **ScaleDownEmpty** - CA 删除了一个没有运行 Pod 的节点。
