--- a/product/域名与网站/网站备案/常见问题/备案后咨询.md
+++ b/product/域名与网站/网站备案/常见问题/备案后咨询.md
@@ -15,4 +15,8 @@
 ### 备案进度如何查询？
 您可在移动端关注 “腾讯云助手”，实时接收备案通知提醒，随时查看备案进度。具体操作请参考 [查看备案进度](https://cloud.tencent.com/document/product/243/19149)。
 
-
+### 备案成功后，备案信息如何查询？
+备案成功后，您可以通过以下3种方式查看您的备案信息。具体操作请参考 [查看备案信息](https://cloud.tencent.com/document/product/243/53419)。
+- 通过备案小程序查询备案信息。
+- 通过备案管理控制台查询备案信息。
+- 通过工信部域名信息备案管理系统查询备案信息。
