--- a/product/管理与支持/账号相关/常见问题/实名认证相关/企业认证方面.md
+++ b/product/管理与支持/账号相关/常见问题/实名认证相关/企业认证方面.md
@@ -94,7 +94,7 @@
 腾讯云仅核验您在腾讯云填写的实名认证信息和公众号实名认证信息是否匹配，匹配一致，则腾讯云账号实名认证成功。认证成功后，您可以在您的微信公众号后台取消授权。
 
 
-### 企业是国内的，法人是海外的是否可以认证腾讯云账号？
+### 企业是国内的，法人是外国人是否可以认证腾讯云账号？
 企业法人是外国人，可以进行企业认证；您可以使用对公打款、充值认证、或者微信公众号认证。外国法人暂不支持使用企业法人授权或法人人脸识别进行企业认证。
 
 ### 注册了企业账号，企业注销了账号会有影响吗？
