--- a/product/计算与网络/容器服务/Prometheus 监控服务/10 计费方式和资源使用.md
+++ b/product/计算与网络/容器服务/Prometheus 监控服务/10 计费方式和资源使用.md
@@ -1,9 +1,17 @@
-目前使用 Prometheus 监控服务时将会在用户的账户下创建 [EKS 集群](https://cloud.tencent.com/document/product/457/39807)、内外网 [负载均衡 CLB](https://cloud.tencent.com/document/product/214) 资源，以及 Prometheus 服务本身的费用，按用户实际使用的云资源收费。本文向您介绍使用 Prometheus 监控服务时资源的使用情况。
-
-Prometheus 监控服务本身的定价可参考 [按量计费](https://cloud.tencent.com/document/product/1416/65379)，除此费用之外，相关其它云资源的使用和费用如下；
-
+目前使用 Prometheus 监控服务（TMP）时将会在用户的账户下创建 [EKS 集群](https://cloud.tencent.com/document/product/457/39807)、内外网 [负载均衡 CLB](https://cloud.tencent.com/document/product/214) 资源，以及 Prometheus 服务本身的费用，按用户实际使用的云资源收费。本文向您介绍使用 Prometheus 监控服务时资源的使用情况。
 
 ## 资源列表
+
+### TMP 实例
+
+TMP 上线了“收费指标采集速率”的能力，您可以用该数值估算监控实例/集群/采集对象/指标等多个维度的预估费用：
+
+1. 登录 [容器服务控制台 ](https://console.cloud.tencent.com/tke2)，选择左侧导航栏中的 **[Prometheus 监控](https://console.cloud.tencent.com/tke2/prometheus2)**，如下图所示：
+2. 有一列名为：“收费指标采集速率”。表示该 TMP 实例的收费指标采集速率，根据用户的指标上报量和采集频率预估算出。该数值乘以 86400 则为一天的监控数据点数，根据[按量计费](https://cloud.tencent.com/document/product/1416/65379)可以计算预估的监控数据刊例价。
+
+![](https://qcloudimg.tencent-cloud.cn/raw/a1873bf5707e78ad1592ac6d6ed8a307.png)
+
+3. 除了上述页面，您也可以在“关联集群”、“数据采集配置”、“指标详情”等多个页面查看到不同维度下的“收费指标采集速率”。
 
 ### EKS 集群
 
@@ -11,10 +19,12 @@ Prometheus 监控服务本身的定价可参考 [按量计费](https://cloud.ten
 ![](https://qcloudimg.tencent-cloud.cn/raw/3771290a1abca09b36cfa469f9854fc1.png)
 
 #### 注意事项
+
 该 EKS 集群的名称为 Prometheus 监控服务**实例的 ID**，集群描述里面说明为 “Prometheus监控专用，请勿修改或删除”。
 ![](https://qcloudimg.tencent-cloud.cn/raw/60a9b6112a94d59f6cdcc37426eb1b31.png)
 
 #### 计费
+
 计费方式为**按量计费**，计费详情请参见 EKS [产品定价](https://cloud.tencent.com/document/product/457/39806#ModeDescription)。
 
 EKS 集群会按照监控量进行自动扩缩容，监控规模和 EKS 集群费用的关系可参考：
@@ -46,4 +56,3 @@ EKS 集群成本示例如下：
 ## 资源销毁
 
 目前不支持用户直接在对应控制台删除资源，例如需要在 Prometheus 监控销毁监控实例，对应的所有资源会一并销毁。腾讯云不主动回收用户的监控实例，若您不再使用 Prometheus 监控服务，请务必及时删除监控实例，以免发生资源的额外扣费。
-
