--- a/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
+++ b/product/计算与网络/对等连接/最佳实践/跨地域对等连接服务迁移至云联网.md
@@ -3,26 +3,28 @@
 
 如果迁移过程中有任何疑问，请联系您的商务经理获取腾讯云技术支持，或 [提交工单](https://console.cloud.tencent.com/workorder/category) 进行反馈。
 ## 操作场景
-+ **场景一**：南京VPC1和VPC2通过对等连接打通。
-**迁移方案**：可将两个VPC关联至云联网来实现跨地域VPC间互通。
++ **场景一**：南京 VPC1 和 VPC2 通过对等连接打通。
+**迁移方案**：可将两个 VPC 关联至云联网来实现跨地域 VPC 间互通。
  + 迁移前：
-![](https://qcloudimg.tencent-cloud.cn/raw/8ac6696b3158be51f14bca758f3ce1fe.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/e5de03bd8ef8117eb361b61096ce12f7.png)
  + 迁移后：
-![](https://qcloudimg.tencent-cloud.cn/raw/7a89f138a3923418901bc29a5a18d4c9.png)
-+ **场景二**：跨地域多个VPC间需要全互联，由于对等连接连通性不能传递，因此每两个VPC之间都需要通过对等连接互通。
- **迁移方案**：可将多个VPC加入一个云联网实例来实现全网互通。
+![](https://qcloudimg.tencent-cloud.cn/raw/526540fbf8f3f48a9f29ad6957ea2f3e.png)
++ **场景二**：跨地域多个 VPC 间需要全互联，由于对等连接连通性不能传递，因此每两个 VPC 之间都通过对等连接互通。
+ **迁移方案**：可将多个 VPC 加入一个云联网实例来实现全网互通。
  + 迁移前：
 ![](https://qcloudimg.tencent-cloud.cn/raw/603d7cccc595666960af21d59d7e9d77.png)
  + 迁移后：
 ![](https://qcloudimg.tencent-cloud.cn/raw/e37dea0447ab9d0c9e97ebccb16b29b0.png)
-+ **场景三**：VPC1与其他多个VPC打通，但其他多个VPC间不能互通。
-  **迁移方案**：可使用云联网打通VPC1和其他所有VPC，其他VPC间请使用网络ACL来实现子网间的访问控制，仅放通需要通信的VPC网段。
++ **场景三**：VPC1 通过对等连接分别与 VPC2、VPC3 打通，VPC2 和 VPC3 之间不互通。
+  **迁移方案**：可使用云联网打通 VPC1 和 VPC2、VPC3，VPC2 和 VPC3 之间的不互通可通过子网关联网络ACL 来实现访问控制，即 ACL 中仅放通需要通信的网段即可。
 	迁移前：
 	![](https://qcloudimg.tencent-cloud.cn/raw/028d1f8c79caf9325bc0a8c92da10f5d.png)
 	迁移后：
 	![](https://qcloudimg.tencent-cloud.cn/raw/ad50a87a987b054cf27562a826a9379d.png)
-+ **场景四**：VPC1与VPC2、VPC3分别通过对等连接通信，VPC2和VPC3 不通，其中VPC1的子网11和VPC2的子网21、VPC3的子网31 通信；VPC1的子网12与VPC2的子网22、VPC3的子网32通信；VPC1的子网13与VPC2的子网23、VPC3的子网33通信。
-   **迁移方案**：可使用云联网打通VPC1、VPC2、VPC3，由于云联网会使得VPC1、VPC2、VPC全互通，因此请提前根据实际情况修改各个子网的ACL，使其仅放通的需要通信的子网网段即可。
++ **场景四**：VPC1 与 VPC2、VPC3 分别通过对等连接通信，VPC2 和 VPC3 不通，其中 VPC1 的子网11和 VPC2 的子网21、VPC3 的子网31 通信；VPC1 的子网12与 VPC2 的子网22、VPC3 的子网32通信；VPC1 的子网13与 VPC2 的子网23、VPC3 的子网33通信。
+>?子网间的访问控制通过各自的网络 ACL 来实现，例如 VPC2 的子网21的网络 ACL21，出入站仅放通需要通信的 VPC1 的子网11的网段，其余网段将均被拒绝，以此来达到子网间流量访问控制的目的。
+>
+**迁移方案**：可使用云联网打通 VPC1、VPC2、VPC3，由于云联网会使得 VPC1、VPC2、VPC 全互通，因此请提前确认好各个子网的 ACL 规则确保其只放通了需要通信的子网网段即可。
 	 迁移前：
 	 ![](https://qcloudimg.tencent-cloud.cn/raw/a5a61035bfdf110555ce8a9884f1bacb.png)
 	 迁移后：
@@ -31,28 +33,25 @@
 ## 操作步骤
 >?
 >+ 以场景一为例，给出操作步骤。
->+ 场景二中相比场景一为多VPC间全互通，请将VPC逐一加入云联网，并及时确认云联网及VPC中的路由情况，当网段CIDR有冲突时，路由状态将显示“失效”，请参考 [路由限制及冲突解决方案](https://cloud.tencent.com/document/product/877/18679#.E8.B7.AF.E7.94.B1.E9.99.90.E5.88.B6) 处理即可。
->+ 场景三和场景四，请提前根据子网间的通信情况，为子网配置合适的 [ACL策略](https://cloud.tencent.com/document/product/215/36727)，再逐一迁移至云联网。
-
+>+ 场景二中相比场景一为多 VPC 间全互通，请将 VPC 逐一加入云联网，并及时确认云联网及 VPC 中的路由情况，当网段 CIDR 有冲突时，路由状态将显示“失效”，请参考 [路由冲突处理原则](https://cloud.tencent.com/document/product/877/18854#lyct) 处理即可。
+>+ 场景三和场景四，请提前根据子网间的通信情况，为子网配置合适的 [ACL 策略](https://cloud.tencent.com/document/product/215/36727)，再逐一迁移至云联网。
+>
 1. [创建1个云联网实例](https://cloud.tencent.com/document/product/877/18752)，并关联VPC1。
-    ![](https://qcloudimg.tencent-cloud.cn/raw/83b11e969f8309f101499e528ba7ce62.png)
-2. 单击云联网ID，并进入路由表页签，可看到云联网路由表中，目的端为VPC1子网的路由策略。
-      
-	 ![](https://qcloudimg.tencent-cloud.cn/raw/44e7be2fcb8c27e3a7fd6d5dde42b4ba.png)
-3. 请参见 [关联网络实例](https://cloud.tencent.com/document/product/877/18747) 将VPC2关联至云联网。
-4. 再次单击云联网ID，进入路由表页签，可看到云联网路由表中，新增目的端为VPC2子网的路由策略。
+ ![](https://qcloudimg.tencent-cloud.cn/raw/83b11e969f8309f101499e528ba7ce62.png)
+2. 单击云联网 ID，并进入路由表页签，可看到云联网路由表中，目的端为 VPC1 子网的路由策略。
+![](https://qcloudimg.tencent-cloud.cn/raw/44e7be2fcb8c27e3a7fd6d5dde42b4ba.png)
+3. 请参见 [关联网络实例](https://cloud.tencent.com/document/product/877/18747) 将 VPC2 关联至云联网。
+4. 再次单击云联网 ID，进入路由表页签，可看到云联网路由表中，新增目的端为 VPC2 子网的路由策略。
     ![](https://qcloudimg.tencent-cloud.cn/raw/4d5860c1bd45b14e6864fafb747a38f3.png)
-5. 分别查看VPC1和VPC2子网关联的路由表，可看到路由策略中均新增一条下一跳到云联网的路由策略，但根据对等连接的路由冲突原则，目的端网段重叠时，后加入的路由不生效，因此此时VPC1和VPC2通信依然走的是对等连接。
-    ![](https://qcloudimg.tencent-cloud.cn/raw/a0c345c403ed77d2a3fc4e8351acfed2.png)
-		
-	![](https://qcloudimg.tencent-cloud.cn/raw/8081e9e5b5540a4c220569ae5017ec01.png)
-<span id="step6">6. 请在VPC1的路由表中，启用VPC1到云联网的路由策略，并禁用VPC1到VPC2的对等连接的路由策略，此时VPC1到VPC2走的时云联网，VPC2到VPC1仍然走的是对等连接，此时业务通信正常。
-   ![](https://qcloudimg.tencent-cloud.cn/raw/df15732f362e793663183c83498a3bb9.png)
-	 
-7. 查看监控或登录CVM ping网络查看流量是否正常，监控查看方式请参见[查看云联网监控数据](https://cloud.tencent.com/document/product/877/18755)、[查看跨地域对等连接监控数据](https://cloud.tencent.com/document/product/553/18842)。如不正常请回退后联系[在线支持]()。
+5. 分别查看 VPC1 和 VPC2 子网关联的路由表，可看到路由策略中均新增一条下一跳到云联网的路由策略，但根据路由冲突原则，目的端网段重叠时，后加入的路由不生效，因此此时 VPC1 和 VPC2 通信依然走的是对等连接。
+ ![](https://qcloudimg.tencent-cloud.cn/raw/a0c345c403ed77d2a3fc4e8351acfed2.png)
+![](https://qcloudimg.tencent-cloud.cn/raw/8081e9e5b5540a4c220569ae5017ec01.png)
+6. <span id="step6">请参考 [启用路由策略](https://cloud.tencent.com/document/product/215/53587#.E5.90.AF.E7.94.A8.2F.E7.A6.81.E7.94.A8.E8.B7.AF.E7.94.B1.E7.AD.96.E7.95.A5) 在 VPC1 的路由表中，启用 VPC1 到 VPC2 指向云联网的路由策略，并禁用 VPC1 到 VPC2 指向对等连接的路由策略，此时 VPC1 到 VPC2 走的是云联网，VPC2 到 VPC1 仍然走的是对等连接。
+  ![](https://qcloudimg.tencent-cloud.cn/raw/aeb20b566d225898d41a720ef4c6e765.png)
+7. 查看监控或[ 登录CVM](https://cloud.tencent.com/document/product/213/5436) ping 网络查看流量是否正常，监控查看方式请参见[查看云联网监控数据](https://cloud.tencent.com/document/product/877/18755)、[查看跨地域对等连接监控数据](https://cloud.tencent.com/document/product/553/18842)。如不正常请回退后联系[ 在线支持](https://cloud.tencent.com/online-service)。
     ![](https://qcloudimg.tencent-cloud.cn/raw/0b107fad18337e7359249f53939ad706.png)
-8. 参考 <a href ="#step6">步骤6</a> 请在VPC2的路由表中，启用VPC2到云联网的路由策略，并禁用VPC2到VPC1的对等连接的路由策略。
-9. 请查看监控或查看ping流量是否正常。
-    + 如不正常请回退后联系[在线支持]()。
-    + 如一周内业务流量均正常，且通过监控查看对等连接已确认无任何流量，则可以删除VPC1和VPC2中对等连接的路由策略，此时迁移完成。
+8. 请参考 <a href ="#step6">步骤6</a> 在 VPC2 的路由表中，启用 VPC2 到 VPC1 指向云联网的路由策略，并禁用 VPC2 到 VPC1 指向对等连接的路由策略。
+9. 请查看监控或查看 ping 流量是否正常。
+    + 如不正常请回退后联系 [在线支持](https://cloud.tencent.com/online-service)。
+    + 如一周内业务流量均正常，且通过监控查看对等连接已确认无任何流量，则可以参考 [删除路由策略](https://cloud.tencent.com/document/product/215/53587#.E5.88.A0.E9.99.A4.E8.B7.AF.E7.94.B1.E7.AD.96.E7.95.A5)、[删除对等连接](https://cloud.tencent.com/document/product/553/18848) 删除 VPC1 和 VPC2 路由表中指向对等连接的路由策略以及对等连接服务，此时迁移完成。
     
