--- a/product/互联网中间件/TDMQ RocketMQ 版/03 快速入门/01 资源创建与准备.md
+++ b/product/互联网中间件/TDMQ RocketMQ 版/03 快速入门/01 资源创建与准备.md
@@ -10,7 +10,7 @@
 
 ### 步骤1：新建集群
 
-1. 登录 [TDMQ 控制台](https://console.cloud.tencent.com/tdmq)，进入**集群管理**页面，选择目标地域。
+1. 登录 [TDMQ 控制台](https://console.cloud.tencent.com/tdmq/rocket-cluster)，进入**集群管理**页面，选择目标地域。
 2. 单击**新建集群**，填写集群名称和说明，创建一个集群。
 ![](https://qcloudimg.tencent-cloud.cn/raw/c7cad655e8d68fb94e10b92959b6858c.png)
 3. 在集群列表页面，单击创建好的集群操作栏的**接入地址**，得到服务端的连接信息。
